--- a/_sass/yolo/brand/syntax/_dracula.scss
+++ b/_sass/yolo/brand/syntax/_dracula.scss
@@ -1,174 +1,158 @@
 // ----------------------------------------------------------------------------
-// dracula syntax theme
+// dracula light-mode syntax theme
 // ----------------------------------------------------------------------------
-:root[light] {
-  --syntax-text: #f8f8f2;
-  --syntax-container-color: #282a36;
-  --syntax-highlight-color: #44475a;
-
-  --syntax-error: #f8f8f2;
-  --syntax-punctuation: #f8f8f2;
-  --syntax-text-whitespace: #f8f8f2;
-
-  --syntax-comment-hashbang: #6272a4;
-  --syntax-comment-multiline: #6272a4;
-  --syntax-comment-preproc: #ff79c6;
-  --syntax-comment-preprocfile: #ff79c6;
-  --syntax-comment-single: #6272a4;
-  --syntax-comment-special: #6272a4;
-  --syntax-comment: #6272a4;
-
-  --syntax-generic-deleted: #8b080b;
-  --syntax-generic-emph: #f8f8f2;
-  --syntax-generic-error: #f8f8f2;
-  --syntax-generic-heading: #f8f8f2;
-  --syntax-generic-inserted: #f8f8f2;
-  --syntax-generic-output: #44475a;
-  --syntax-generic-prompt: #f8f8f2;
-  --syntax-generic-strong: #f8f8f2;
-  --syntax-generic-subheading: #f8f8f2;
-  --syntax-generic-traceback: #f8f8f2;
-
-  --syntax-keyword-constant: #ff79c6;
-  --syntax-keyword-declaration: #8be9fd;
-  --syntax-keyword-namespace: #ff79c6;
-  --syntax-keyword-pseudo: #ff79c6;
-  --syntax-keyword-reserved: #ff79c6;
-  --syntax-keyword-type: #8be9fd;
-  --syntax-keyword: #ff79c6;
-
-  --syntax-literal-date: #f8f8f2;
-  --syntax-literal: #f8f8f2;
-
-  --syntax-name-attribute: #50fa7b;
-  --syntax-name-builtin-pseudo: #f8f8f2;
-  --syntax-name-builtin: #8be9fd;
-  --syntax-name-class: #50fa7b;
-  --syntax-name-constant: #f8f8f2;
-  --syntax-name-decorator: #f8f8f2;
-  --syntax-name-entity: #f8f8f2;
-  --syntax-name-exception: #f8f8f2;
-  --syntax-name-function-magic: #50fa7b;
-  --syntax-name-function: #50fa7b;
-  --syntax-name-label: #8be9fd;
-  --syntax-name-namespace: #f8f8f2;
-  --syntax-name-other: #f8f8f2;
-  --syntax-name-tag: #ff79c6;
-  --syntax-name-variable-class: #8be9fd;
-  --syntax-name-variable-global: #8be9fd;
-  --syntax-name-variable-instance: #8be9fd;
-  --syntax-name-variable: #8be9fd;
-  --syntax-name: #f8f8f2;
-
-  --syntax-number-bin: #ffb86c;
-  --syntax-number-float: #ffb86c;
-  --syntax-number-hex: #ffb86c;
-  --syntax-number-integer-long: #ffb86c;
-  --syntax-number-integer: #ffb86c;
-  --syntax-number-oct: #ffb86c;
-  --syntax-number: #ffb86c;
-
-  --syntax-operator-word: #ff79c6;
-  --syntax-operator: #ff79c6;
-
-  --syntax-string-affix: #bd93f9;
-  --syntax-string-backtick: #bd93f9;
-  --syntax-string-char: #bd93f9;
-  --syntax-string-delimiter: #bd93f9;
-  --syntax-string-doc: #bd93f9;
-  --syntax-string-double: #bd93f9;
-  --syntax-string-escape: #bd93f9;
-  --syntax-string-heredoc: #bd93f9;
-  --syntax-string-interpol: #bd93f9;
-  --syntax-string-other: #bd93f9;
-  --syntax-string-regex: #bd93f9;
-  --syntax-string-single: #bd93f9;
-  --syntax-string-symbol: #bd93f9;
-  --syntax-string: #bd93f9;
-}
-:root[dark] {
-  --syntax-text: #f8f8f2;
-  --syntax-container-color: #282a36;
-  --syntax-highlight-color: #44475a;
-
-  --syntax-error: #f8f8f2;
-  --syntax-punctuation: #f8f8f2;
-  --syntax-text-whitespace: #f8f8f2;
-
-  --syntax-comment-hashbang: #6272a4;
-  --syntax-comment-multiline: #6272a4;
-  --syntax-comment-preproc: #ff79c6;
-  --syntax-comment-preprocfile: #ff79c6;
-  --syntax-comment-single: #6272a4;
-  --syntax-comment-special: #6272a4;
-  --syntax-comment: #6272a4;
-
-  --syntax-generic-deleted: #8b080b;
-  --syntax-generic-emph: #f8f8f2;
-  --syntax-generic-error: #f8f8f2;
-  --syntax-generic-heading: #f8f8f2;
-  --syntax-generic-inserted: #f8f8f2;
-  --syntax-generic-output: #44475a;
-  --syntax-generic-prompt: #f8f8f2;
-  --syntax-generic-strong: #f8f8f2;
-  --syntax-generic-subheading: #f8f8f2;
-  --syntax-generic-traceback: #f8f8f2;
-
-  --syntax-keyword-constant: #ff79c6;
-  --syntax-keyword-declaration: #8be9fd;
-  --syntax-keyword-namespace: #ff79c6;
-  --syntax-keyword-pseudo: #ff79c6;
-  --syntax-keyword-reserved: #ff79c6;
-  --syntax-keyword-type: #8be9fd;
-  --syntax-keyword: #ff79c6;
-
-  --syntax-literal-date: #f8f8f2;
-  --syntax-literal: #f8f8f2;
-
-  --syntax-name-attribute: #50fa7b;
-  --syntax-name-builtin-pseudo: #f8f8f2;
-  --syntax-name-builtin: #8be9fd;
-  --syntax-name-class: #50fa7b;
-  --syntax-name-constant: #f8f8f2;
-  --syntax-name-decorator: #f8f8f2;
-  --syntax-name-entity: #f8f8f2;
-  --syntax-name-exception: #f8f8f2;
-  --syntax-name-function-magic: #50fa7b;
-  --syntax-name-function: #50fa7b;
-  --syntax-name-label: #8be9fd;
-  --syntax-name-namespace: #f8f8f2;
-  --syntax-name-other: #f8f8f2;
-  --syntax-name-tag: #ff79c6;
-  --syntax-name-variable-class: #8be9fd;
-  --syntax-name-variable-global: #8be9fd;
-  --syntax-name-variable-instance: #8be9fd;
-  --syntax-name-variable: #8be9fd;
-  --syntax-name: #f8f8f2;
-
-  --syntax-number-bin: #ffb86c;
-  --syntax-number-float: #ffb86c;
-  --syntax-number-hex: #ffb86c;
-  --syntax-number-integer-long: #ffb86c;
-  --syntax-number-integer: #ffb86c;
-  --syntax-number-oct: #ffb86c;
-  --syntax-number: #ffb86c;
-
-  --syntax-operator-word: #ff79c6;
-  --syntax-operator: #ff79c6;
-
-  --syntax-string-affix: #bd93f9;
-  --syntax-string-backtick: #bd93f9;
-  --syntax-string-char: #bd93f9;
-  --syntax-string-delimiter: #bd93f9;
-  --syntax-string-doc: #bd93f9;
-  --syntax-string-double: #bd93f9;
-  --syntax-string-escape: #bd93f9;
-  --syntax-string-heredoc: #bd93f9;
-  --syntax-string-interpol: #bd93f9;
-  --syntax-string-other: #bd93f9;
-  --syntax-string-regex: #bd93f9;
-  --syntax-string-single: #bd93f9;
-  --syntax-string-symbol: #bd93f9;
-  --syntax-string: #bd93f9;
-}
-
+$light-syntax-comment-hashbang: #6272a4;
+$light-syntax-comment-multiline: #6272a4;
+$light-syntax-comment-preproc: #ff79c6;
+$light-syntax-comment-preprocfile: #ff79c6;
+$light-syntax-comment-single: #6272a4;
+$light-syntax-comment-special: #6272a4;
+$light-syntax-comment: #6272a4;
+$light-syntax-container-color: #282a36;
+$light-syntax-error: #f8f8f2;
+$light-syntax-generic-deleted: #8b080b;
+$light-syntax-generic-emph: #f8f8f2;
+$light-syntax-generic-error: #f8f8f2;
+$light-syntax-generic-heading: #f8f8f2;
+$light-syntax-generic-inserted: #f8f8f2;
+$light-syntax-generic-output: #44475a;
+$light-syntax-generic-prompt: #f8f8f2;
+$light-syntax-generic-strong: #f8f8f2;
+$light-syntax-generic-subheading: #f8f8f2;
+$light-syntax-generic-traceback: #f8f8f2;
+$light-syntax-highlight-color: #44475a;
+$light-syntax-keyword-constant: #ff79c6;
+$light-syntax-keyword-declaration: #8be9fd;
+$light-syntax-keyword-namespace: #ff79c6;
+$light-syntax-keyword-pseudo: #ff79c6;
+$light-syntax-keyword-reserved: #ff79c6;
+$light-syntax-keyword-type: #8be9fd;
+$light-syntax-keyword: #ff79c6;
+$light-syntax-literal-date: #f8f8f2;
+$light-syntax-literal: #f8f8f2;
+$light-syntax-name-attribute: #50fa7b;
+$light-syntax-name-builtin-pseudo: #f8f8f2;
+$light-syntax-name-builtin: #8be9fd;
+$light-syntax-name-class: #50fa7b;
+$light-syntax-name-constant: #f8f8f2;
+$light-syntax-name-decorator: #f8f8f2;
+$light-syntax-name-entity: #f8f8f2;
+$light-syntax-name-exception: #f8f8f2;
+$light-syntax-name-function-magic: #50fa7b;
+$light-syntax-name-function: #50fa7b;
+$light-syntax-name-label: #8be9fd;
+$light-syntax-name-namespace: #f8f8f2;
+$light-syntax-name-other: #f8f8f2;
+$light-syntax-name-property: #50fa7b;
+$light-syntax-name-tag: #ff79c6;
+$light-syntax-name-variable-class: #8be9fd;
+$light-syntax-name-variable-global: #8be9fd;
+$light-syntax-name-variable-instance: #8be9fd;
+$light-syntax-name-variable-magic: #8be9fd;
+$light-syntax-name-variable: #8be9fd;
+$light-syntax-name: #f8f8f2;
+$light-syntax-number-bin: #ffb86c;
+$light-syntax-number-float: #ffb86c;
+$light-syntax-number-hex: #ffb86c;
+$light-syntax-number-integer-long: #ffb86c;
+$light-syntax-number-integer: #ffb86c;
+$light-syntax-number-oct: #ffb86c;
+$light-syntax-number: #ffb86c;
+$light-syntax-operator-word: #ff79c6;
+$light-syntax-operator: #ff79c6;
+$light-syntax-punctuation: #f8f8f2;
+$light-syntax-string-affix: #bd93f9;
+$light-syntax-string-backtick: #bd93f9;
+$light-syntax-string-char: #bd93f9;
+$light-syntax-string-delimiter: #bd93f9;
+$light-syntax-string-doc: #bd93f9;
+$light-syntax-string-double: #bd93f9;
+$light-syntax-string-escape: #bd93f9;
+$light-syntax-string-heredoc: #bd93f9;
+$light-syntax-string-interpol: #bd93f9;
+$light-syntax-string-other: #bd93f9;
+$light-syntax-string-regex: #bd93f9;
+$light-syntax-string-single: #bd93f9;
+$light-syntax-string-symbol: #bd93f9;
+$light-syntax-string: #bd93f9;
+$light-syntax-text-whitespace: #f8f8f2;
+$light-syntax-text: #f8f8f2;
+// ----------------------------------------------------------------------------
+// dracula dark-mode syntax theme
+// ----------------------------------------------------------------------------
+$dark-syntax-comment-hashbang: #6272a4;
+$dark-syntax-comment-multiline: #6272a4;
+$dark-syntax-comment-preproc: #ff79c6;
+$dark-syntax-comment-preprocfile: #ff79c6;
+$dark-syntax-comment-single: #6272a4;
+$dark-syntax-comment-special: #6272a4;
+$dark-syntax-comment: #6272a4;
+$dark-syntax-container-color: #282a36;
+$dark-syntax-error: #f8f8f2;
+$dark-syntax-generic-deleted: #8b080b;
+$dark-syntax-generic-emph: #f8f8f2;
+$dark-syntax-generic-error: #f8f8f2;
+$dark-syntax-generic-heading: #f8f8f2;
+$dark-syntax-generic-inserted: #f8f8f2;
+$dark-syntax-generic-output: #44475a;
+$dark-syntax-generic-prompt: #f8f8f2;
+$dark-syntax-generic-strong: #f8f8f2;
+$dark-syntax-generic-subheading: #f8f8f2;
+$dark-syntax-generic-traceback: #f8f8f2;
+$dark-syntax-highlight-color: #44475a;
+$dark-syntax-keyword-constant: #ff79c6;
+$dark-syntax-keyword-declaration: #8be9fd;
+$dark-syntax-keyword-namespace: #ff79c6;
+$dark-syntax-keyword-pseudo: #ff79c6;
+$dark-syntax-keyword-reserved: #ff79c6;
+$dark-syntax-keyword-type: #8be9fd;
+$dark-syntax-keyword: #ff79c6;
+$dark-syntax-literal-date: #f8f8f2;
+$dark-syntax-literal: #f8f8f2;
+$dark-syntax-name-attribute: #50fa7b;
+$dark-syntax-name-builtin-pseudo: #f8f8f2;
+$dark-syntax-name-builtin: #8be9fd;
+$dark-syntax-name-class: #50fa7b;
+$dark-syntax-name-constant: #f8f8f2;
+$dark-syntax-name-decorator: #f8f8f2;
+$dark-syntax-name-entity: #f8f8f2;
+$dark-syntax-name-exception: #f8f8f2;
+$dark-syntax-name-function-magic: #50fa7b;
+$dark-syntax-name-function: #50fa7b;
+$dark-syntax-name-label: #8be9fd;
+$dark-syntax-name-namespace: #f8f8f2;
+$dark-syntax-name-other: #f8f8f2;
+$dark-syntax-name-property: #50fa7b;
+$dark-syntax-name-tag: #ff79c6;
+$dark-syntax-name-variable-class: #8be9fd;
+$dark-syntax-name-variable-global: #8be9fd;
+$dark-syntax-name-variable-instance: #8be9fd;
+$dark-syntax-name-variable-magic: #8be9fd;
+$dark-syntax-name-variable: #8be9fd;
+$dark-syntax-name: #f8f8f2;
+$dark-syntax-number-bin: #ffb86c;
+$dark-syntax-number-float: #ffb86c;
+$dark-syntax-number-hex: #ffb86c;
+$dark-syntax-number-integer-long: #ffb86c;
+$dark-syntax-number-integer: #ffb86c;
+$dark-syntax-number-oct: #ffb86c;
+$dark-syntax-number: #ffb86c;
+$dark-syntax-operator-word: #ff79c6;
+$dark-syntax-operator: #ff79c6;
+$dark-syntax-punctuation: #f8f8f2;
+$dark-syntax-string-affix: #bd93f9;
+$dark-syntax-string-backtick: #bd93f9;
+$dark-syntax-string-char: #bd93f9;
+$dark-syntax-string-delimiter: #bd93f9;
+$dark-syntax-string-doc: #bd93f9;
+$dark-syntax-string-double: #bd93f9;
+$dark-syntax-string-escape: #bd93f9;
+$dark-syntax-string-heredoc: #bd93f9;
+$dark-syntax-string-interpol: #bd93f9;
+$dark-syntax-string-other: #bd93f9;
+$dark-syntax-string-regex: #bd93f9;
+$dark-syntax-string-single: #bd93f9;
+$dark-syntax-string-symbol: #bd93f9;
+$dark-syntax-string: #bd93f9;
+$dark-syntax-text-whitespace: #f8f8f2;
+$dark-syntax-text: #f8f8f2;
