--- a/_sass/yolo/brand/syntax/_dusk.scss
+++ b/_sass/yolo/brand/syntax/_dusk.scss
@@ -1,172 +1,158 @@
 // ----------------------------------------------------------------------------
-// dusk syntax theme
+// dusk light-mode syntax theme
 // ----------------------------------------------------------------------------
-:root[dark] {
-  --syntax-text: #380749;
-  --syntax-container-color: #fff3eb;
-
-  --syntax-error: #d40278;
-  --syntax-punctuation: #380749;
-  --syntax-text-whitespace: #380749;
-
-  --syntax-comment-hashbang: #5867b3;
-  --syntax-comment-multiline: #5867b3;
-  --syntax-comment-preproc: #5867b3;
-  --syntax-comment-preprocfile: #5867b3;
-  --syntax-comment-single: #5867b3;
-  --syntax-comment-special: #5867b3;
-  --syntax-comment: #5867b3;
-
-  --syntax-generic-deleted: #d40278;
-  --syntax-generic-emph: #380749;
-  --syntax-generic-error: #380749;
-  --syntax-generic-heading: #380749;
-  --syntax-generic-inserted: #380749;
-  --syntax-generic-output: #08aeb1;
-  --syntax-generic-prompt: #380749;
-  --syntax-generic-strong: #380749;
-  --syntax-generic-subheading: #380749;
-  --syntax-generic-traceback: #380749;
-
-  --syntax-keyword-constant: #de5703;
-  --syntax-keyword-declaration: #08aeb1;
-  --syntax-keyword-namespace: #de5703;
-  --syntax-keyword-pseudo: #de5703;
-  --syntax-keyword-reserved: #de5703;
-  --syntax-keyword-type: #de5703;
-  --syntax-keyword: #de5703;
-
-  --syntax-literal-date: #380749;
-  --syntax-literal: #380749;
-
-  --syntax-name-attribute: #00a0ff;
-  --syntax-name-builtin-pseudo: #380749;
-  --syntax-name-builtin: #08aeb1;
-  --syntax-name-class: #00a0ff;
-  --syntax-name-constant: #380749;
-  --syntax-name-decorator: #380749;
-  --syntax-name-entity: #380749;
-  --syntax-name-exception: #380749;
-  --syntax-name-function-magic: #00a0ff;
-  --syntax-name-function: #00a0ff;
-  --syntax-name-label: #00a0ff;
-  --syntax-name-namespace: #380749;
-  --syntax-name-other: #de5703;
-  --syntax-name-tag: #de5703;
-  --syntax-name-variable-class: #08aeb1;
-  --syntax-name-variable-global: #08aeb1;
-  --syntax-name-variable-instance: #08aeb1;
-  --syntax-name-variable: #08aeb1;
-  --syntax-name: #380749;
-
-  --syntax-number-bin: #f549b3;
-  --syntax-number-float: #f549b3;
-  --syntax-number-hex: #f549b3;
-  --syntax-number-integer-long: #f549b3;
-  --syntax-number-integer: #f549b3;
-  --syntax-number-oct: #f549b3;
-  --syntax-number: #f549b3;
-
-  --syntax-operator-word: #de5703;
-  --syntax-operator: #de5703;
-
-  --syntax-string-affix: #9d17c9;
-  --syntax-string-backtick: #9d17c9;
-  --syntax-string-char: #9d17c9;
-  --syntax-string-delimiter: #9d17c9;
-  --syntax-string-doc: #9d17c9;
-  --syntax-string-double: #9d17c9;
-  --syntax-string-escape: #9d17c9;
-  --syntax-string-heredoc: #9d17c9;
-  --syntax-string-interpol: #9d17c9;
-  --syntax-string-other: #9d17c9;
-  --syntax-string-regex: #9d17c9;
-  --syntax-string-single: #9d17c9;
-  --syntax-string-symbol: #9d17c9;
-  --syntax-string: #9d17c9;
-}
-:root[light] {
-  --syntax-text: #fff3eb;
-  --syntax-container-color: #380749;
-
-  --syntax-error: #fd0e95;
-  --syntax-punctuation: #fff3eb;
-  --syntax-text-whitespace: #fff3eb;
-
-  --syntax-comment-hashbang: #8f99cc;
-  --syntax-comment-multiline: #8f99cc;
-  --syntax-comment-preproc: #8f99cc;
-  --syntax-comment-preprocfile: #8f99cc;
-  --syntax-comment-single: #8f99cc;
-  --syntax-comment-special: #8f99cc;
-  --syntax-comment: #8f99cc;
-
-  --syntax-generic-deleted: #fd0e95;
-  --syntax-generic-emph: #fff3eb;
-  --syntax-generic-error: #fff3eb;
-  --syntax-generic-heading: #fff3eb;
-  --syntax-generic-inserted: #fff3eb;
-  --syntax-generic-output: #b2feff;
-  --syntax-generic-prompt: #fff3eb;
-  --syntax-generic-strong: #fff3eb;
-  --syntax-generic-subheading: #fff3eb;
-  --syntax-generic-traceback: #fff3eb;
-
-  --syntax-keyword-constant: #f45e02;
-  --syntax-keyword-declaration: #b2feff;
-  --syntax-keyword-namespace: #f45e02;
-  --syntax-keyword-pseudo: #f45e02;
-  --syntax-keyword-reserved: #f45e02;
-  --syntax-keyword-type: #f45e02;
-  --syntax-keyword: #f45e02;
-
-  --syntax-literal-date: #fff3eb;
-  --syntax-literal: #fff3eb;
-
-  --syntax-name-attribute: #00a0ff;
-  --syntax-name-builtin-pseudo: #fff3eb;
-  --syntax-name-builtin: #b2feff;
-  --syntax-name-class: #00a0ff;
-  --syntax-name-constant: #fff3eb;
-  --syntax-name-decorator: #fff3eb;
-  --syntax-name-entity: #fff3eb;
-  --syntax-name-exception: #fff3eb;
-  --syntax-name-function-magic: #00a0ff;
-  --syntax-name-function: #00a0ff;
-  --syntax-name-label: #00a0ff;
-  --syntax-name-namespace: #fff3eb;
-  --syntax-name-other: #f45e02;
-  --syntax-name-tag: #f45e02;
-  --syntax-name-variable-class: #b2feff;
-  --syntax-name-variable-global: #b2feff;
-  --syntax-name-variable-instance: #b2feff;
-  --syntax-name-variable: #b2feff;
-  --syntax-name: #fff3eb;
-
-  --syntax-number-bin: #f549b3;
-  --syntax-number-float: #f549b3;
-  --syntax-number-hex: #f549b3;
-  --syntax-number-integer-long: #f549b3;
-  --syntax-number-integer: #f549b3;
-  --syntax-number-oct: #f549b3;
-  --syntax-number: #f549b3;
-
-  --syntax-operator-word: #f45e02;
-  --syntax-operator: #f45e02;
-
-  --syntax-string-affix: #c85aec;
-  --syntax-string-backtick: #c85aec;
-  --syntax-string-char: #c85aec;
-  --syntax-string-delimiter: #c85aec;
-  --syntax-string-doc: #c85aec;
-  --syntax-string-double: #c85aec;
-  --syntax-string-escape: #c85aec;
-  --syntax-string-heredoc: #c85aec;
-  --syntax-string-interpol: #c85aec;
-  --syntax-string-other: #c85aec;
-  --syntax-string-regex: #c85aec;
-  --syntax-string-single: #c85aec;
-  --syntax-string-symbol: #c85aec;
-  --syntax-string: #c85aec;
-}
-
+$light-syntax-comment-hashbang: #5867b3;
+$light-syntax-comment-multiline: #5867b3;
+$light-syntax-comment-preproc: #5867b3;
+$light-syntax-comment-preprocfile: #5867b3;
+$light-syntax-comment-single: #5867b3;
+$light-syntax-comment-special: #5867b3;
+$light-syntax-comment: #5867b3;
+$light-syntax-container-color: #fff3eb;
+$light-syntax-error: #d40278;
+$light-syntax-generic-deleted: #d40278;
+$light-syntax-generic-emph: #380749;
+$light-syntax-generic-error: #380749;
+$light-syntax-generic-heading: #380749;
+$light-syntax-generic-inserted: #380749;
+$light-syntax-generic-output: #08aeb1;
+$light-syntax-generic-prompt: #380749;
+$light-syntax-generic-strong: #380749;
+$light-syntax-generic-subheading: #380749;
+$light-syntax-generic-traceback: #380749;
+$light-syntax-highlight-color: #08aeb1;
+$light-syntax-keyword-constant: #de5703;
+$light-syntax-keyword-declaration: #08aeb1;
+$light-syntax-keyword-namespace: #de5703;
+$light-syntax-keyword-pseudo: #de5703;
+$light-syntax-keyword-reserved: #de5703;
+$light-syntax-keyword-type: #de5703;
+$light-syntax-keyword: #de5703;
+$light-syntax-literal-date: #380749;
+$light-syntax-literal: #380749;
+$light-syntax-name-attribute: #00a0ff;
+$light-syntax-name-builtin-pseudo: #380749;
+$light-syntax-name-builtin: #08aeb1;
+$light-syntax-name-class: #00a0ff;
+$light-syntax-name-constant: #380749;
+$light-syntax-name-decorator: #380749;
+$light-syntax-name-entity: #380749;
+$light-syntax-name-exception: #380749;
+$light-syntax-name-function-magic: #00a0ff;
+$light-syntax-name-function: #00a0ff;
+$light-syntax-name-label: #00a0ff;
+$light-syntax-name-namespace: #380749;
+$light-syntax-name-other: #de5703;
+$light-syntax-name-property: #00a0ff;
+$light-syntax-name-tag: #de5703;
+$light-syntax-name-variable-class: #08aeb1;
+$light-syntax-name-variable-global: #08aeb1;
+$light-syntax-name-variable-instance: #08aeb1;
+$light-syntax-name-variable-magic: #08aeb1;
+$light-syntax-name-variable: #08aeb1;
+$light-syntax-name: #380749;
+$light-syntax-number-bin: #f549b3;
+$light-syntax-number-float: #f549b3;
+$light-syntax-number-hex: #f549b3;
+$light-syntax-number-integer-long: #f549b3;
+$light-syntax-number-integer: #f549b3;
+$light-syntax-number-oct: #f549b3;
+$light-syntax-number: #f549b3;
+$light-syntax-operator-word: #de5703;
+$light-syntax-operator: #de5703;
+$light-syntax-punctuation: #380749;
+$light-syntax-string-affix: #9d17c9;
+$light-syntax-string-backtick: #9d17c9;
+$light-syntax-string-char: #9d17c9;
+$light-syntax-string-delimiter: #9d17c9;
+$light-syntax-string-doc: #9d17c9;
+$light-syntax-string-double: #9d17c9;
+$light-syntax-string-escape: #9d17c9;
+$light-syntax-string-heredoc: #9d17c9;
+$light-syntax-string-interpol: #9d17c9;
+$light-syntax-string-other: #9d17c9;
+$light-syntax-string-regex: #9d17c9;
+$light-syntax-string-single: #9d17c9;
+$light-syntax-string-symbol: #9d17c9;
+$light-syntax-string: #9d17c9;
+$light-syntax-text-whitespace: #380749;
+$light-syntax-text: #380749;
+// ----------------------------------------------------------------------------
+// dusk dark-mode syntax theme
+// ----------------------------------------------------------------------------
+$dark-syntax-comment-hashbang: #8f99cc;
+$dark-syntax-comment-multiline: #8f99cc;
+$dark-syntax-comment-preproc: #8f99cc;
+$dark-syntax-comment-preprocfile: #8f99cc;
+$dark-syntax-comment-single: #8f99cc;
+$dark-syntax-comment-special: #8f99cc;
+$dark-syntax-comment: #8f99cc;
+$dark-syntax-container-color: #380749;
+$dark-syntax-error: #fd0e95;
+$dark-syntax-generic-deleted: #fd0e95;
+$dark-syntax-generic-emph: #fff3eb;
+$dark-syntax-generic-error: #fff3eb;
+$dark-syntax-generic-heading: #fff3eb;
+$dark-syntax-generic-inserted: #fff3eb;
+$dark-syntax-generic-output: #b2feff;
+$dark-syntax-generic-prompt: #fff3eb;
+$dark-syntax-generic-strong: #fff3eb;
+$dark-syntax-generic-subheading: #fff3eb;
+$dark-syntax-generic-traceback: #fff3eb;
+$dark-syntax-highlight-color: #08aeb1;
+$dark-syntax-keyword-constant: #f45e02;
+$dark-syntax-keyword-declaration: #b2feff;
+$dark-syntax-keyword-namespace: #f45e02;
+$dark-syntax-keyword-pseudo: #f45e02;
+$dark-syntax-keyword-reserved: #f45e02;
+$dark-syntax-keyword-type: #f45e02;
+$dark-syntax-keyword: #f45e02;
+$dark-syntax-literal-date: #fff3eb;
+$dark-syntax-literal: #fff3eb;
+$dark-syntax-name-attribute: #00a0ff;
+$dark-syntax-name-builtin-pseudo: #fff3eb;
+$dark-syntax-name-builtin: #b2feff;
+$dark-syntax-name-class: #00a0ff;
+$dark-syntax-name-constant: #fff3eb;
+$dark-syntax-name-decorator: #fff3eb;
+$dark-syntax-name-entity: #fff3eb;
+$dark-syntax-name-exception: #fff3eb;
+$dark-syntax-name-function-magic: #00a0ff;
+$dark-syntax-name-function: #00a0ff;
+$dark-syntax-name-label: #00a0ff;
+$dark-syntax-name-namespace: #fff3eb;
+$dark-syntax-name-other: #f45e02;
+$dark-syntax-name-property: #00a0ff;
+$dark-syntax-name-tag: #f45e02;
+$dark-syntax-name-variable-class: #b2feff;
+$dark-syntax-name-variable-global: #b2feff;
+$dark-syntax-name-variable-instance: #b2feff;
+$dark-syntax-name-variable-magic: #b2feff;
+$dark-syntax-name-variable: #b2feff;
+$dark-syntax-name: #fff3eb;
+$dark-syntax-number-bin: #f549b3;
+$dark-syntax-number-float: #f549b3;
+$dark-syntax-number-hex: #f549b3;
+$dark-syntax-number-integer-long: #f549b3;
+$dark-syntax-number-integer: #f549b3;
+$dark-syntax-number-oct: #f549b3;
+$dark-syntax-number: #f549b3;
+$dark-syntax-operator-word: #f45e02;
+$dark-syntax-operator: #f45e02;
+$dark-syntax-punctuation: #fff3eb;
+$dark-syntax-string-affix: #c85aec;
+$dark-syntax-string-backtick: #c85aec;
+$dark-syntax-string-char: #c85aec;
+$dark-syntax-string-delimiter: #c85aec;
+$dark-syntax-string-doc: #c85aec;
+$dark-syntax-string-double: #c85aec;
+$dark-syntax-string-escape: #c85aec;
+$dark-syntax-string-heredoc: #c85aec;
+$dark-syntax-string-interpol: #c85aec;
+$dark-syntax-string-other: #c85aec;
+$dark-syntax-string-regex: #c85aec;
+$dark-syntax-string-single: #c85aec;
+$dark-syntax-string-symbol: #c85aec;
+$dark-syntax-string: #c85aec;
+$dark-syntax-text-whitespace: #fff3eb;
+$dark-syntax-text: #fff3eb;
