--- a/_sass/yolo/brand/syntax/_yolo.scss
+++ b/_sass/yolo/brand/syntax/_yolo.scss
@@ -1,173 +1,158 @@
 // ----------------------------------------------------------------------------
-// yolo syntax theme
+// yolo light-mode syntax theme
 // ----------------------------------------------------------------------------
-:root[light] {
-  --syntax-text: #d2d2f3;
-  --syntax-container-color: #040511;
-  --syntax-highlight-color: #44475a;
-
-  --syntax-error: #b71c1c;
-  --syntax-punctuation: #0ca9f4;
-  --syntax-text-whitespace: #d2d2f3;
-
-  --syntax-comment-hashbang: #b5036a;
-  --syntax-comment-multiline: #b5036a;
-  --syntax-comment-preproc: #b5036a;
-  --syntax-comment-preprocfile: #b5036a;
-  --syntax-comment-single: #b5036a;
-  --syntax-comment-special: #b5036a;
-  --syntax-comment: #b5036a;
-
-  --syntax-generic-deleted: #b71c1c;
-  --syntax-generic-emph: #ecedff;
-  --syntax-generic-error: #ecedff;
-  --syntax-generic-heading: #ecedff;
-  --syntax-generic-inserted: #ecedff;
-  --syntax-generic-output: #ecedff;
-  --syntax-generic-prompt: #ffab40;
-  --syntax-generic-strong: #ffab40;
-  --syntax-generic-subheading: #ecedff;
-  --syntax-generic-traceback: #ecedff;
-
-  --syntax-keyword-constant: #fb1d9e;
-  --syntax-keyword-declaration: #0ca9f4;
-  --syntax-keyword-namespace: #fb1d9e;
-  --syntax-keyword-pseudo: #fb1d9e;
-  --syntax-keyword-reserved: #fb1d9e;
-  --syntax-keyword-type: #0ca9f4;
-  --syntax-keyword: #fb1d9e;
-
-  --syntax-literal-date: #ecedff;
-  --syntax-literal: #ecedff;
-
-  --syntax-name-attribute: #50fa7b;
-  --syntax-name-builtin-pseudo: #d2d2f3;
-  --syntax-name-builtin: #0ca9f4;
-  --syntax-name-class: #50fa7b;
-  --syntax-name-constant: #ecedff;
-  --syntax-name-decorator: #ecedff;
-  --syntax-name-entity: #ecedff;
-  --syntax-name-exception: #ecedff;
-  --syntax-name-function-magic: #50fa7b;
-  --syntax-name-function: #50fa7b;
-  --syntax-name-label: #50fa7b;
-  --syntax-name-namespace: #ecedff;
-  --syntax-name-other: #ecedff;
-  --syntax-name-tag: #fb1d9e;
-  --syntax-name-variable-class: #0ca9f4;
-  --syntax-name-variable-global: #0ca9f4;
-  --syntax-name-variable-instance: #0ca9f4;
-  --syntax-name-variable: #0ca9f4;
-  --syntax-name: #ecedff;
-
-  --syntax-number-bin: #ffab40;
-  --syntax-number-float: #ffab40;
-  --syntax-number-hex: #ffab40;
-  --syntax-number-integer-long: #ffab40;
-  --syntax-number-integer: #ffab40;
-  --syntax-number-oct: #ffab40;
-  --syntax-number: #ffab40;
-
-  --syntax-operator-word: #50fa7b;
-  --syntax-operator: #50fa7b;
-
-  --syntax-string-affix: #7c85fa;
-  --syntax-string-backtick: #7c85fa;
-  --syntax-string-char: #7c85fa;
-  --syntax-string-delimiter: #7c85fa;
-  --syntax-string-doc: #7c85fa;
-  --syntax-string-double: #65cffc;
-  --syntax-string-escape: #7c85fa;
-  --syntax-string-heredoc: #7c85fa;
-  --syntax-string-interpol: #7c85fa;
-  --syntax-string-other: #65cffc;
-  --syntax-string-regex: #7c85fa;
-  --syntax-string-single: #65cffc;
-  --syntax-string-symbol: #7c85fa;
-  --syntax-string: #7c85fa;
-}
-:root[dark] {
-  --syntax-text: #d2d2f3;
-  --syntax-container-color: #040511;
-  --syntax-highlight-color: #44475a;
-
-  --syntax-error: #b71c1c;
-  --syntax-punctuation: #0ca9f4;
-  --syntax-text-whitespace: #d2d2f3;
-
-  --syntax-comment-hashbang: #b5036a;
-  --syntax-comment-multiline: #b5036a;
-  --syntax-comment-preproc: #b5036a;
-  --syntax-comment-preprocfile: #b5036a;
-  --syntax-comment-single: #b5036a;
-  --syntax-comment-special: #b5036a;
-  --syntax-comment: #b5036a;
-
-  --syntax-generic-deleted: #b71c1c;
-  --syntax-generic-emph: #ecedff;
-  --syntax-generic-error: #ecedff;
-  --syntax-generic-heading: #ecedff;
-  --syntax-generic-inserted: #ecedff;
-  --syntax-generic-output: #ecedff;
-  --syntax-generic-prompt: #ffab40;
-  --syntax-generic-strong: #ffab40;
-  --syntax-generic-subheading: #ecedff;
-  --syntax-generic-traceback: #ecedff;
-
-  --syntax-keyword-constant: #fb1d9e;
-  --syntax-keyword-declaration: #0ca9f4;
-  --syntax-keyword-namespace: #fb1d9e;
-  --syntax-keyword-pseudo: #fb1d9e;
-  --syntax-keyword-reserved: #fb1d9e;
-  --syntax-keyword-type: #0ca9f4;
-  --syntax-keyword: #fb1d9e;
-
-  --syntax-literal-date: #ecedff;
-  --syntax-literal: #ecedff;
-
-  --syntax-name-attribute: #50fa7b;
-  --syntax-name-builtin-pseudo: #d2d2f3;
-  --syntax-name-builtin: #0ca9f4;
-  --syntax-name-class: #50fa7b;
-  --syntax-name-constant: #ecedff;
-  --syntax-name-decorator: #ecedff;
-  --syntax-name-entity: #ecedff;
-  --syntax-name-exception: #ecedff;
-  --syntax-name-function-magic: #50fa7b;
-  --syntax-name-function: #50fa7b;
-  --syntax-name-label: #50fa7b;
-  --syntax-name-namespace: #ecedff;
-  --syntax-name-other: #ecedff;
-  --syntax-name-tag: #fb1d9e;
-  --syntax-name-variable-class: #0ca9f4;
-  --syntax-name-variable-global: #0ca9f4;
-  --syntax-name-variable-instance: #0ca9f4;
-  --syntax-name-variable: #0ca9f4;
-  --syntax-name: #ecedff;
-
-  --syntax-number-bin: #ffab40;
-  --syntax-number-float: #ffab40;
-  --syntax-number-hex: #ffab40;
-  --syntax-number-integer-long: #ffab40;
-  --syntax-number-integer: #ffab40;
-  --syntax-number-oct: #ffab40;
-  --syntax-number: #ffab40;
-
-  --syntax-operator-word: #50fa7b;
-  --syntax-operator: #50fa7b;
-
-  --syntax-string-affix: #7c85fa;
-  --syntax-string-backtick: #7c85fa;
-  --syntax-string-char: #7c85fa;
-  --syntax-string-delimiter: #7c85fa;
-  --syntax-string-doc: #7c85fa;
-  --syntax-string-double: #65cffc;
-  --syntax-string-escape: #7c85fa;
-  --syntax-string-heredoc: #7c85fa;
-  --syntax-string-interpol: #7c85fa;
-  --syntax-string-other: #65cffc;
-  --syntax-string-regex: #7c85fa;
-  --syntax-string-single: #65cffc;
-  --syntax-string-symbol: #7c85fa;
-  --syntax-string: #7c85fa;
-}
+$light-syntax-comment-hashbang: #b5036a;
+$light-syntax-comment-multiline: #b5036a;
+$light-syntax-comment-preproc: #b5036a;
+$light-syntax-comment-preprocfile: #b5036a;
+$light-syntax-comment-single: #b5036a;
+$light-syntax-comment-special: #b5036a;
+$light-syntax-comment: #b5036a;
+$light-syntax-container-color: #040511;
+$light-syntax-error: #b71c1c;
+$light-syntax-generic-deleted: #b71c1c;
+$light-syntax-generic-emph: #ecedff;
+$light-syntax-generic-error: #ecedff;
+$light-syntax-generic-heading: #ecedff;
+$light-syntax-generic-inserted: #ecedff;
+$light-syntax-generic-output: #ecedff;
+$light-syntax-generic-prompt: #ffab40;
+$light-syntax-generic-strong: #ffab40;
+$light-syntax-generic-subheading: #ecedff;
+$light-syntax-generic-traceback: #ecedff;
+$light-syntax-highlight-color: #44475a;
+$light-syntax-keyword-constant: #fb1d9e;
+$light-syntax-keyword-declaration: #0ca9f4;
+$light-syntax-keyword-namespace: #fb1d9e;
+$light-syntax-keyword-pseudo: #fb1d9e;
+$light-syntax-keyword-reserved: #fb1d9e;
+$light-syntax-keyword-type: #0ca9f4;
+$light-syntax-keyword: #fb1d9e;
+$light-syntax-literal-date: #ecedff;
+$light-syntax-literal: #ecedff;
+$light-syntax-name-attribute: #50fa7b;
+$light-syntax-name-builtin-pseudo: #d2d2f3;
+$light-syntax-name-builtin: #0ca9f4;
+$light-syntax-name-class: #50fa7b;
+$light-syntax-name-constant: #ecedff;
+$light-syntax-name-decorator: #ecedff;
+$light-syntax-name-entity: #ecedff;
+$light-syntax-name-exception: #ecedff;
+$light-syntax-name-function-magic: #50fa7b;
+$light-syntax-name-function: #50fa7b;
+$light-syntax-name-label: #50fa7b;
+$light-syntax-name-namespace: #ecedff;
+$light-syntax-name-other: #ecedff;
+$light-syntax-name-property: #50fa7b;
+$light-syntax-name-tag: #fb1d9e;
+$light-syntax-name-variable-class: #0ca9f4;
+$light-syntax-name-variable-global: #0ca9f4;
+$light-syntax-name-variable-instance: #0ca9f4;
+$light-syntax-name-variable-magic: #0ca9f4;
+$light-syntax-name-variable: #0ca9f4;
+$light-syntax-name: #ecedff;
+$light-syntax-number-bin: #ffab40;
+$light-syntax-number-float: #ffab40;
+$light-syntax-number-hex: #ffab40;
+$light-syntax-number-integer-long: #ffab40;
+$light-syntax-number-integer: #ffab40;
+$light-syntax-number-oct: #ffab40;
+$light-syntax-number: #ffab40;
+$light-syntax-operator-word: #50fa7b;
+$light-syntax-operator: #50fa7b;
+$light-syntax-punctuation: #0ca9f4;
+$light-syntax-string-affix: #7c85fa;
+$light-syntax-string-backtick: #7c85fa;
+$light-syntax-string-char: #7c85fa;
+$light-syntax-string-delimiter: #7c85fa;
+$light-syntax-string-doc: #7c85fa;
+$light-syntax-string-double: #65cffc;
+$light-syntax-string-escape: #7c85fa;
+$light-syntax-string-heredoc: #7c85fa;
+$light-syntax-string-interpol: #7c85fa;
+$light-syntax-string-other: #65cffc;
+$light-syntax-string-regex: #7c85fa;
+$light-syntax-string-single: #65cffc;
+$light-syntax-string-symbol: #7c85fa;
+$light-syntax-string: #7c85fa;
+$light-syntax-text-whitespace: #d2d2f3;
+$light-syntax-text: #d2d2f3;
+// ----------------------------------------------------------------------------
+// yolo dark-mode syntax theme
+// ----------------------------------------------------------------------------
+$dark-syntax-comment-hashbang: #b5036a;
+$dark-syntax-comment-multiline: #b5036a;
+$dark-syntax-comment-preproc: #b5036a;
+$dark-syntax-comment-preprocfile: #b5036a;
+$dark-syntax-comment-single: #b5036a;
+$dark-syntax-comment-special: #b5036a;
+$dark-syntax-comment: #b5036a;
+$dark-syntax-container-color: #040511;
+$dark-syntax-error: #b71c1c;
+$dark-syntax-generic-deleted: #b71c1c;
+$dark-syntax-generic-emph: #ecedff;
+$dark-syntax-generic-error: #ecedff;
+$dark-syntax-generic-heading: #ecedff;
+$dark-syntax-generic-inserted: #ecedff;
+$dark-syntax-generic-output: #ecedff;
+$dark-syntax-generic-prompt: #ffab40;
+$dark-syntax-generic-strong: #ffab40;
+$dark-syntax-generic-subheading: #ecedff;
+$dark-syntax-generic-traceback: #ecedff;
+$dark-syntax-highlight-color: #44475a;
+$dark-syntax-keyword-constant: #fb1d9e;
+$dark-syntax-keyword-declaration: #0ca9f4;
+$dark-syntax-keyword-namespace: #fb1d9e;
+$dark-syntax-keyword-pseudo: #fb1d9e;
+$dark-syntax-keyword-reserved: #fb1d9e;
+$dark-syntax-keyword-type: #0ca9f4;
+$dark-syntax-keyword: #fb1d9e;
+$dark-syntax-literal-date: #ecedff;
+$dark-syntax-literal: #ecedff;
+$dark-syntax-name-attribute: #50fa7b;
+$dark-syntax-name-builtin-pseudo: #d2d2f3;
+$dark-syntax-name-builtin: #0ca9f4;
+$dark-syntax-name-class: #50fa7b;
+$dark-syntax-name-constant: #ecedff;
+$dark-syntax-name-decorator: #ecedff;
+$dark-syntax-name-entity: #ecedff;
+$dark-syntax-name-exception: #ecedff;
+$dark-syntax-name-function-magic: #50fa7b;
+$dark-syntax-name-function: #50fa7b;
+$dark-syntax-name-label: #50fa7b;
+$dark-syntax-name-namespace: #ecedff;
+$dark-syntax-name-other: #ecedff;
+$dark-syntax-name-property: #50fa7b;
+$dark-syntax-name-tag: #fb1d9e;
+$dark-syntax-name-variable-class: #0ca9f4;
+$dark-syntax-name-variable-global: #0ca9f4;
+$dark-syntax-name-variable-instance: #0ca9f4;
+$dark-syntax-name-variable-magic: #0ca9f4;
+$dark-syntax-name-variable: #0ca9f4;
+$dark-syntax-name: #ecedff;
+$dark-syntax-number-bin: #ffab40;
+$dark-syntax-number-float: #ffab40;
+$dark-syntax-number-hex: #ffab40;
+$dark-syntax-number-integer-long: #ffab40;
+$dark-syntax-number-integer: #ffab40;
+$dark-syntax-number-oct: #ffab40;
+$dark-syntax-number: #ffab40;
+$dark-syntax-operator-word: #50fa7b;
+$dark-syntax-operator: #50fa7b;
+$dark-syntax-punctuation: #0ca9f4;
+$dark-syntax-string-affix: #7c85fa;
+$dark-syntax-string-backtick: #7c85fa;
+$dark-syntax-string-char: #7c85fa;
+$dark-syntax-string-delimiter: #7c85fa;
+$dark-syntax-string-doc: #7c85fa;
+$dark-syntax-string-double: #65cffc;
+$dark-syntax-string-escape: #7c85fa;
+$dark-syntax-string-heredoc: #7c85fa;
+$dark-syntax-string-interpol: #7c85fa;
+$dark-syntax-string-other: #65cffc;
+$dark-syntax-string-regex: #7c85fa;
+$dark-syntax-string-single: #65cffc;
+$dark-syntax-string-symbol: #7c85fa;
+$dark-syntax-string: #7c85fa;
+$dark-syntax-text-whitespace: #d2d2f3;
+$dark-syntax-text: #d2d2f3;
