--- a/_sass/yolo/brand/syntax/_domino.scss
+++ b/_sass/yolo/brand/syntax/_domino.scss
@@ -1,172 +1,158 @@
 // ----------------------------------------------------------------------------
-// onebit syntax theme
+// domino light-mode syntax theme
 // ----------------------------------------------------------------------------
-:root[light] {
-  --syntax-text: #000;
-  --syntax-container-color: #fff;
-
-  --syntax-error: #000;
-  --syntax-punctuation: #000;
-  --syntax-text-whitespace: #000;
-
-  --syntax-comment-hashbang: #000;
-  --syntax-comment-multiline: #000;
-  --syntax-comment-preproc: #000;
-  --syntax-comment-preprocfile: #000;
-  --syntax-comment-single: #000;
-  --syntax-comment-special: #000;
-  --syntax-comment: #000;
-
-  --syntax-generic-deleted: #000;
-  --syntax-generic-emph: #000;
-  --syntax-generic-error: #000;
-  --syntax-generic-heading: #000;
-  --syntax-generic-inserted: #000;
-  --syntax-generic-output: #000;
-  --syntax-generic-prompt: #000;
-  --syntax-generic-strong: #000;
-  --syntax-generic-subheading: #000;
-  --syntax-generic-traceback: #000;
-
-  --syntax-keyword-constant: #000;
-  --syntax-keyword-declaration: #000;
-  --syntax-keyword-namespace: #000;
-  --syntax-keyword-pseudo: #000;
-  --syntax-keyword-reserved: #000;
-  --syntax-keyword-type: #000;
-  --syntax-keyword: #000;
-
-  --syntax-literal-date: #000;
-  --syntax-literal: #000;
-
-  --syntax-name-attribute: #000;
-  --syntax-name-builtin-pseudo: #000;
-  --syntax-name-builtin: #000;
-  --syntax-name-class: #000;
-  --syntax-name-constant: #000;
-  --syntax-name-decorator: #000;
-  --syntax-name-entity: #000;
-  --syntax-name-exception: #000;
-  --syntax-name-function-magic: #000;
-  --syntax-name-function: #000;
-  --syntax-name-label: #000;
-  --syntax-name-namespace: #000;
-  --syntax-name-other: #000;
-  --syntax-name-tag: #000;
-  --syntax-name-variable-class: #000;
-  --syntax-name-variable-global: #000;
-  --syntax-name-variable-instance: #000;
-  --syntax-name-variable: #000;
-  --syntax-name: #000;
-
-  --syntax-number-bin: #000;
-  --syntax-number-float: #000;
-  --syntax-number-hex: #000;
-  --syntax-number-integer-long: #000;
-  --syntax-number-integer: #000;
-  --syntax-number-oct: #000;
-  --syntax-number: #000;
-
-  --syntax-operator-word: #000;
-  --syntax-operator: #000;
-
-  --syntax-string-affix: #000;
-  --syntax-string-backtick: #000;
-  --syntax-string-char: #000;
-  --syntax-string-delimiter: #000;
-  --syntax-string-doc: #000;
-  --syntax-string-double: #000;
-  --syntax-string-escape: #000;
-  --syntax-string-heredoc: #000;
-  --syntax-string-interpol: #000;
-  --syntax-string-other: #000;
-  --syntax-string-regex: #000;
-  --syntax-string-single: #000;
-  --syntax-string-symbol: #000;
-  --syntax-string: #000;
-}
-:root[dark] {
-  --syntax-text: #fff;
-  --syntax-container-color: #000;
-
-  --syntax-error: #fff;
-  --syntax-punctuation: #fff;
-  --syntax-text-whitespace: #fff;
-
-  --syntax-comment-hashbang: #fff;
-  --syntax-comment-multiline: #fff;
-  --syntax-comment-preproc: #fff;
-  --syntax-comment-preprocfile: #fff;
-  --syntax-comment-single: #fff;
-  --syntax-comment-special: #fff;
-  --syntax-comment: #fff;
-
-  --syntax-generic-deleted: #fff;
-  --syntax-generic-emph: #fff;
-  --syntax-generic-error: #fff;
-  --syntax-generic-heading: #fff;
-  --syntax-generic-inserted: #fff;
-  --syntax-generic-output: #fff;
-  --syntax-generic-prompt: #fff;
-  --syntax-generic-strong: #fff;
-  --syntax-generic-subheading: #fff;
-  --syntax-generic-traceback: #fff;
-
-  --syntax-keyword-constant: #fff;
-  --syntax-keyword-declaration: #fff;
-  --syntax-keyword-namespace: #fff;
-  --syntax-keyword-pseudo: #fff;
-  --syntax-keyword-reserved: #fff;
-  --syntax-keyword-type: #fff;
-  --syntax-keyword: #fff;
-
-  --syntax-literal-date: #fff;
-  --syntax-literal: #fff;
-
-  --syntax-name-attribute: #fff;
-  --syntax-name-builtin-pseudo: #fff;
-  --syntax-name-builtin: #fff;
-  --syntax-name-class: #fff;
-  --syntax-name-constant: #fff;
-  --syntax-name-decorator: #fff;
-  --syntax-name-entity: #fff;
-  --syntax-name-exception: #fff;
-  --syntax-name-function-magic: #fff;
-  --syntax-name-function: #fff;
-  --syntax-name-label: #fff;
-  --syntax-name-namespace: #fff;
-  --syntax-name-other: #fff;
-  --syntax-name-tag: #fff;
-  --syntax-name-variable-class: #fff;
-  --syntax-name-variable-global: #fff;
-  --syntax-name-variable-instance: #fff;
-  --syntax-name-variable: #fff;
-  --syntax-name: #fff;
-
-  --syntax-number-bin: #fff;
-  --syntax-number-float: #fff;
-  --syntax-number-hex: #fff;
-  --syntax-number-integer-long: #fff;
-  --syntax-number-integer: #fff;
-  --syntax-number-oct: #fff;
-  --syntax-number: #fff;
-
-  --syntax-operator-word: #fff;
-  --syntax-operator: #fff;
-
-  --syntax-string-affix: #fff;
-  --syntax-string-backtick: #fff;
-  --syntax-string-char: #fff;
-  --syntax-string-delimiter: #fff;
-  --syntax-string-doc: #fff;
-  --syntax-string-double: #fff;
-  --syntax-string-escape: #fff;
-  --syntax-string-heredoc: #fff;
-  --syntax-string-interpol: #fff;
-  --syntax-string-other: #fff;
-  --syntax-string-regex: #fff;
-  --syntax-string-single: #fff;
-  --syntax-string-symbol: #fff;
-  --syntax-string: #fff;
-}
-
+$light-syntax-comment-hashbang: #000;
+$light-syntax-comment-multiline: #000;
+$light-syntax-comment-preproc: #000;
+$light-syntax-comment-preprocfile: #000;
+$light-syntax-comment-single: #000;
+$light-syntax-comment-special: #000;
+$light-syntax-comment: #000;
+$light-syntax-container-color: #fff;
+$light-syntax-error: #000;
+$light-syntax-generic-deleted: #000;
+$light-syntax-generic-emph: #000;
+$light-syntax-generic-error: #000;
+$light-syntax-generic-heading: #000;
+$light-syntax-generic-inserted: #000;
+$light-syntax-generic-output: #000;
+$light-syntax-generic-prompt: #000;
+$light-syntax-generic-strong: #000;
+$light-syntax-generic-subheading: #000;
+$light-syntax-generic-traceback: #000;
+$light-syntax-highlight-line: #fff;
+$light-syntax-keyword-constant: #000;
+$light-syntax-keyword-declaration: #000;
+$light-syntax-keyword-namespace: #000;
+$light-syntax-keyword-pseudo: #000;
+$light-syntax-keyword-reserved: #000;
+$light-syntax-keyword-type: #000;
+$light-syntax-keyword: #000;
+$light-syntax-literal-date: #000;
+$light-syntax-literal: #000;
+$light-syntax-name-attribute: #000;
+$light-syntax-name-builtin-pseudo: #000;
+$light-syntax-name-builtin: #000;
+$light-syntax-name-class: #000;
+$light-syntax-name-constant: #000;
+$light-syntax-name-decorator: #000;
+$light-syntax-name-entity: #000;
+$light-syntax-name-exception: #000;
+$light-syntax-name-function-magic: #000;
+$light-syntax-name-function: #000;
+$light-syntax-name-label: #000;
+$light-syntax-name-namespace: #000;
+$light-syntax-name-other: #000;
+$light-syntax-name-property: #000;
+$light-syntax-name-tag: #000;
+$light-syntax-name-variable-class: #000;
+$light-syntax-name-variable-global: #000;
+$light-syntax-name-variable-instance: #000;
+$light-syntax-name-variable-magic: #000;
+$light-syntax-name-variable: #000;
+$light-syntax-name: #000;
+$light-syntax-number-bin: #000;
+$light-syntax-number-float: #000;
+$light-syntax-number-hex: #000;
+$light-syntax-number-integer-long: #000;
+$light-syntax-number-integer: #000;
+$light-syntax-number-oct: #000;
+$light-syntax-number: #000;
+$light-syntax-operator-word: #000;
+$light-syntax-operator: #000;
+$light-syntax-punctuation: #000;
+$light-syntax-string-affix: #000;
+$light-syntax-string-backtick: #000;
+$light-syntax-string-char: #000;
+$light-syntax-string-delimiter: #000;
+$light-syntax-string-doc: #000;
+$light-syntax-string-double: #000;
+$light-syntax-string-escape: #000;
+$light-syntax-string-heredoc: #000;
+$light-syntax-string-interpol: #000;
+$light-syntax-string-other: #000;
+$light-syntax-string-regex: #000;
+$light-syntax-string-single: #000;
+$light-syntax-string-symbol: #000;
+$light-syntax-string: #000;
+$light-syntax-text-whitespace: #000;
+$light-syntax-text: #000;
+// ----------------------------------------------------------------------------
+// domino dark-mode syntax theme
+// ----------------------------------------------------------------------------
+$dark-syntax-comment-hashbang: #fff;
+$dark-syntax-comment-multiline: #fff;
+$dark-syntax-comment-preproc: #fff;
+$dark-syntax-comment-preprocfile: #fff;
+$dark-syntax-comment-single: #fff;
+$dark-syntax-comment-special: #fff;
+$dark-syntax-comment: #fff;
+$dark-syntax-container-color: #000;
+$dark-syntax-error: #fff;
+$dark-syntax-generic-deleted: #fff;
+$dark-syntax-generic-emph: #fff;
+$dark-syntax-generic-error: #fff;
+$dark-syntax-generic-heading: #fff;
+$dark-syntax-generic-inserted: #fff;
+$dark-syntax-generic-output: #fff;
+$dark-syntax-generic-prompt: #fff;
+$dark-syntax-generic-strong: #fff;
+$dark-syntax-generic-subheading: #fff;
+$dark-syntax-generic-traceback: #fff;
+$dark-syntax-highlight-line: #000;
+$dark-syntax-keyword-constant: #fff;
+$dark-syntax-keyword-declaration: #fff;
+$dark-syntax-keyword-namespace: #fff;
+$dark-syntax-keyword-pseudo: #fff;
+$dark-syntax-keyword-reserved: #fff;
+$dark-syntax-keyword-type: #fff;
+$dark-syntax-keyword: #fff;
+$dark-syntax-literal-date: #fff;
+$dark-syntax-literal: #fff;
+$dark-syntax-name-attribute: #fff;
+$dark-syntax-name-builtin-pseudo: #fff;
+$dark-syntax-name-builtin: #fff;
+$dark-syntax-name-class: #fff;
+$dark-syntax-name-constant: #fff;
+$dark-syntax-name-decorator: #fff;
+$dark-syntax-name-entity: #fff;
+$dark-syntax-name-exception: #fff;
+$dark-syntax-name-function-magic: #fff;
+$dark-syntax-name-function: #fff;
+$dark-syntax-name-label: #fff;
+$dark-syntax-name-namespace: #fff;
+$dark-syntax-name-other: #fff;
+$dark-syntax-name-property: #fff;
+$dark-syntax-name-tag: #fff;
+$dark-syntax-name-variable-class: #fff;
+$dark-syntax-name-variable-global: #fff;
+$dark-syntax-name-variable-instance: #fff;
+$dark-syntax-name-variable-magic: #fff;
+$dark-syntax-name-variable: #fff;
+$dark-syntax-name: #fff;
+$dark-syntax-number-bin: #fff;
+$dark-syntax-number-float: #fff;
+$dark-syntax-number-hex: #fff;
+$dark-syntax-number-integer-long: #fff;
+$dark-syntax-number-integer: #fff;
+$dark-syntax-number-oct: #fff;
+$dark-syntax-number: #fff;
+$dark-syntax-operator-word: #fff;
+$dark-syntax-operator: #fff;
+$dark-syntax-punctuation: #fff;
+$dark-syntax-string-affix: #fff;
+$dark-syntax-string-backtick: #fff;
+$dark-syntax-string-char: #fff;
+$dark-syntax-string-delimiter: #fff;
+$dark-syntax-string-doc: #fff;
+$dark-syntax-string-double: #fff;
+$dark-syntax-string-escape: #fff;
+$dark-syntax-string-heredoc: #fff;
+$dark-syntax-string-interpol: #fff;
+$dark-syntax-string-other: #fff;
+$dark-syntax-string-regex: #fff;
+$dark-syntax-string-single: #fff;
+$dark-syntax-string-symbol: #fff;
+$dark-syntax-string: #fff;
+$dark-syntax-text-whitespace: #fff;
+$dark-syntax-text: #fff;
