--- a/_sass/yolo/brand/syntax/_monokai.scss
+++ b/_sass/yolo/brand/syntax/_monokai.scss
@@ -1,172 +1,158 @@
 // ----------------------------------------------------------------------------
-// monokai syntax scheme
+// monokai light-mode syntax theme
 // ----------------------------------------------------------------------------
-:root[light] {
-  --syntax-text: #e8e6e5;
-  --syntax-container-color: #212121;
-
-  --syntax-error: #ff6288;
-  --syntax-punctuation: #e8e6e5;
-  --syntax-text-whitespace: #e8e6e5;
-
-  --syntax-comment-hashbang: #75715e;
-  --syntax-comment-multiline: #75715e;
-  --syntax-comment-preproc: #75715e;
-  --syntax-comment-preprocfile: #75715e;
-  --syntax-comment-single: #75715e;
-  --syntax-comment-special: #75715e;
-  --syntax-comment: #75715e;
-
-  --syntax-generic-deleted: #ff6288;
-  --syntax-generic-emph: #fc9867;
-  --syntax-generic-error: #fc9867;
-  --syntax-generic-heading: #fc9867;
-  --syntax-generic-inserted: #fc9867;
-  --syntax-generic-output: #fc9867;
-  --syntax-generic-prompt: #fc9867;
-  --syntax-generic-strong: #fc9867;
-  --syntax-generic-subheading: #fc9867;
-  --syntax-generic-traceback: #fc9867;
-
-  --syntax-keyword-constant: #79dce8;
-  --syntax-keyword-declaration: #79dce8;
-  --syntax-keyword-namespace: #ff6288;
-  --syntax-keyword-pseudo: #79dce8;
-  --syntax-keyword-reserved: #79dce8;
-  --syntax-keyword-type: #79dce8;
-  --syntax-keyword: #79dce8;
-
-  --syntax-literal-date: #ffd966;
-  --syntax-literal: #ffd966;
-
-  --syntax-name-attribute: #a9dd76;
-  --syntax-name-builtin-pseudo: #e8e6e5;
-  --syntax-name-builtin: #e8e6e5;
-  --syntax-name-class: #a9dd76;
-  --syntax-name-constant: #79dce8;
-  --syntax-name-decorator: #a9dd76;
-  --syntax-name-entity: #f8f8f2;
-  --syntax-name-exception: #a9dd76;
-  --syntax-name-function-magic: #a9dd76;
-  --syntax-name-function: #a9dd76;
-  --syntax-name-label: #e8e6e5;
-  --syntax-name-namespace: #e8e6e5;
-  --syntax-name-other: #a9dd76;
-  --syntax-name-tag: #ff6288;
-  --syntax-name-variable-class: #e8e6e5;
-  --syntax-name-variable-global: #e8e6e5;
-  --syntax-name-variable-instance: #e8e6e5;
-  --syntax-name-variable: #e8e6e5;
-  --syntax-name: #e8e6e5;
-
-  --syntax-number-bin: #ac9df2;
-  --syntax-number-float: #ac9df2;
-  --syntax-number-hex: #ac9df2;
-  --syntax-number-integer-long: #ac9df2;
-  --syntax-number-integer: #ac9df2;
-  --syntax-number-oct: #ac9df2;
-  --syntax-number: #ac9df2;
-
-  --syntax-operator-word: #ff6288;
-  --syntax-operator: #ff6288;
-
-  --syntax-string-affix: #ffd966;
-  --syntax-string-backtick: #ffd966;
-  --syntax-string-char: #ffd966;
-  --syntax-string-delimiter: #ffd966;
-  --syntax-string-doc: #ffd966;
-  --syntax-string-double: #ffd966;
-  --syntax-string-escape: #ac9df2;
-  --syntax-string-heredoc: #ffd966;
-  --syntax-string-interpol: #ffd966;
-  --syntax-string-other: #ffd966;
-  --syntax-string-regex: #ffd966;
-  --syntax-string-single: #ffd966;
-  --syntax-string-symbol: #ffd966;
-  --syntax-string: #ffd966;
-}
-:root[dark] {
-  --syntax-text: #e8e6e5;
---syntax-container-color: #212121;
-
---syntax-error: #ff6288;
---syntax-punctuation: #e8e6e5;
---syntax-text-whitespace: #e8e6e5;
-
---syntax-comment-hashbang: #75715e;
---syntax-comment-multiline: #75715e;
---syntax-comment-preproc: #75715e;
---syntax-comment-preprocfile: #75715e;
---syntax-comment-single: #75715e;
---syntax-comment-special: #75715e;
---syntax-comment: #75715e;
-
---syntax-generic-deleted: #ff6288;
---syntax-generic-emph: #fc9867;
---syntax-generic-error: #fc9867;
---syntax-generic-heading: #fc9867;
---syntax-generic-inserted: #fc9867;
---syntax-generic-output: #fc9867;
---syntax-generic-prompt: #fc9867;
---syntax-generic-strong: #fc9867;
---syntax-generic-subheading: #fc9867;
---syntax-generic-traceback: #fc9867;
-
---syntax-keyword-constant: #79dce8;
---syntax-keyword-declaration: #79dce8;
---syntax-keyword-namespace: #ff6288;
---syntax-keyword-pseudo: #79dce8;
---syntax-keyword-reserved: #79dce8;
---syntax-keyword-type: #79dce8;
---syntax-keyword: #79dce8;
-
---syntax-literal-date: #ffd966;
---syntax-literal: #ffd966;
-
---syntax-name-attribute: #a9dd76;
---syntax-name-builtin-pseudo: #e8e6e5;
---syntax-name-builtin: #e8e6e5;
---syntax-name-class: #a9dd76;
---syntax-name-constant: #79dce8;
---syntax-name-decorator: #a9dd76;
---syntax-name-entity: #f8f8f2;
---syntax-name-exception: #a9dd76;
---syntax-name-function-magic: #a9dd76;
---syntax-name-function: #a9dd76;
---syntax-name-label: #e8e6e5;
---syntax-name-namespace: #e8e6e5;
---syntax-name-other: #a9dd76;
---syntax-name-tag: #ff6288;
---syntax-name-variable-class: #e8e6e5;
---syntax-name-variable-global: #e8e6e5;
---syntax-name-variable-instance: #e8e6e5;
---syntax-name-variable: #e8e6e5;
---syntax-name: #e8e6e5;
-
---syntax-number-bin: #ac9df2;
---syntax-number-float: #ac9df2;
---syntax-number-hex: #ac9df2;
---syntax-number-integer-long: #ac9df2;
---syntax-number-integer: #ac9df2;
---syntax-number-oct: #ac9df2;
---syntax-number: #ac9df2;
-
---syntax-operator-word: #ff6288;
---syntax-operator: #ff6288;
-
---syntax-string-affix: #ffd966;
---syntax-string-backtick: #ffd966;
---syntax-string-char: #ffd966;
---syntax-string-delimiter: #ffd966;
---syntax-string-doc: #ffd966;
---syntax-string-double: #ffd966;
---syntax-string-escape: #ac9df2;
---syntax-string-heredoc: #ffd966;
---syntax-string-interpol: #ffd966;
---syntax-string-other: #ffd966;
---syntax-string-regex: #ffd966;
---syntax-string-single: #ffd966;
---syntax-string-symbol: #ffd966;
---syntax-string: #ffd966;
-}
-
+$light-syntax-comment-hashbang: #75715e;
+$light-syntax-comment-multiline: #75715e;
+$light-syntax-comment-preproc: #75715e;
+$light-syntax-comment-preprocfile: #75715e;
+$light-syntax-comment-single: #75715e;
+$light-syntax-comment-special: #75715e;
+$light-syntax-comment: #75715e;
+$light-syntax-container-color: #212121;
+$light-syntax-error: #ff6288;
+$light-syntax-generic-deleted: #ff6288;
+$light-syntax-generic-emph: #fc9867;
+$light-syntax-generic-error: #fc9867;
+$light-syntax-generic-heading: #fc9867;
+$light-syntax-generic-inserted: #fc9867;
+$light-syntax-generic-output: #fc9867;
+$light-syntax-generic-prompt: #fc9867;
+$light-syntax-generic-strong: #fc9867;
+$light-syntax-generic-subheading: #fc9867;
+$light-syntax-generic-traceback: #fc9867;
+$light-syntax-highlight-color: #ffd966;
+$light-syntax-keyword-constant: #79dce8;
+$light-syntax-keyword-declaration: #79dce8;
+$light-syntax-keyword-namespace: #ff6288;
+$light-syntax-keyword-pseudo: #79dce8;
+$light-syntax-keyword-reserved: #79dce8;
+$light-syntax-keyword-type: #79dce8;
+$light-syntax-keyword: #79dce8;
+$light-syntax-literal-date: #ffd966;
+$light-syntax-literal: #ffd966;
+$light-syntax-name-attribute: #a9dd76;
+$light-syntax-name-builtin-pseudo: #e8e6e5;
+$light-syntax-name-builtin: #e8e6e5;
+$light-syntax-name-class: #a9dd76;
+$light-syntax-name-constant: #79dce8;
+$light-syntax-name-decorator: #a9dd76;
+$light-syntax-name-entity: #f8f8f2;
+$light-syntax-name-exception: #a9dd76;
+$light-syntax-name-function-magic: #a9dd76;
+$light-syntax-name-function: #a9dd76;
+$light-syntax-name-label: #e8e6e5;
+$light-syntax-name-namespace: #e8e6e5;
+$light-syntax-name-other: #a9dd76;
+$light-syntax-name-property: #a9dd76;
+$light-syntax-name-tag: #ff6288;
+$light-syntax-name-variable-class: #e8e6e5;
+$light-syntax-name-variable-global: #e8e6e5;
+$light-syntax-name-variable-instance: #e8e6e5;
+$light-syntax-name-variable-magic: #e8e6e5;
+$light-syntax-name-variable: #e8e6e5;
+$light-syntax-name: #e8e6e5;
+$light-syntax-number-bin: #ac9df2;
+$light-syntax-number-float: #ac9df2;
+$light-syntax-number-hex: #ac9df2;
+$light-syntax-number-integer-long: #ac9df2;
+$light-syntax-number-integer: #ac9df2;
+$light-syntax-number-oct: #ac9df2;
+$light-syntax-number: #ac9df2;
+$light-syntax-operator-word: #ff6288;
+$light-syntax-operator: #ff6288;
+$light-syntax-punctuation: #e8e6e5;
+$light-syntax-string-affix: #ffd966;
+$light-syntax-string-backtick: #ffd966;
+$light-syntax-string-char: #ffd966;
+$light-syntax-string-delimiter: #ffd966;
+$light-syntax-string-doc: #ffd966;
+$light-syntax-string-double: #ffd966;
+$light-syntax-string-escape: #ac9df2;
+$light-syntax-string-heredoc: #ffd966;
+$light-syntax-string-interpol: #ffd966;
+$light-syntax-string-other: #ffd966;
+$light-syntax-string-regex: #ffd966;
+$light-syntax-string-single: #ffd966;
+$light-syntax-string-symbol: #ffd966;
+$light-syntax-string: #ffd966;
+$light-syntax-text-whitespace: #e8e6e5;
+$light-syntax-text: #e8e6e5;
+// ----------------------------------------------------------------------------
+// monokai dark-mode syntax theme
+// ----------------------------------------------------------------------------
+$dark-syntax-comment-hashbang: #75715e;
+$dark-syntax-comment-multiline: #75715e;
+$dark-syntax-comment-preproc: #75715e;
+$dark-syntax-comment-preprocfile: #75715e;
+$dark-syntax-comment-single: #75715e;
+$dark-syntax-comment-special: #75715e;
+$dark-syntax-comment: #75715e;
+$dark-syntax-container-color: #212121;
+$dark-syntax-error: #ff6288;
+$dark-syntax-generic-deleted: #ff6288;
+$dark-syntax-generic-emph: #fc9867;
+$dark-syntax-generic-error: #fc9867;
+$dark-syntax-generic-heading: #fc9867;
+$dark-syntax-generic-inserted: #fc9867;
+$dark-syntax-generic-output: #fc9867;
+$dark-syntax-generic-prompt: #fc9867;
+$dark-syntax-generic-strong: #fc9867;
+$dark-syntax-generic-subheading: #fc9867;
+$dark-syntax-generic-traceback: #fc9867;
+$dark-syntax-highlight-color: #fc9867;
+$dark-syntax-keyword-constant: #79dce8;
+$dark-syntax-keyword-declaration: #79dce8;
+$dark-syntax-keyword-namespace: #ff6288;
+$dark-syntax-keyword-pseudo: #79dce8;
+$dark-syntax-keyword-reserved: #79dce8;
+$dark-syntax-keyword-type: #79dce8;
+$dark-syntax-keyword: #79dce8;
+$dark-syntax-literal-date: #ffd966;
+$dark-syntax-literal: #ffd966;
+$dark-syntax-name-attribute: #a9dd76;
+$dark-syntax-name-builtin-pseudo: #e8e6e5;
+$dark-syntax-name-builtin: #e8e6e5;
+$dark-syntax-name-class: #a9dd76;
+$dark-syntax-name-constant: #79dce8;
+$dark-syntax-name-decorator: #a9dd76;
+$dark-syntax-name-entity: #f8f8f2;
+$dark-syntax-name-exception: #a9dd76;
+$dark-syntax-name-function-magic: #a9dd76;
+$dark-syntax-name-function: #a9dd76;
+$dark-syntax-name-label: #e8e6e5;
+$dark-syntax-name-namespace: #e8e6e5;
+$dark-syntax-name-other: #a9dd76;
+$dark-syntax-name-property: #a9dd76;
+$dark-syntax-name-tag: #ff6288;
+$dark-syntax-name-variable-class: #e8e6e5;
+$dark-syntax-name-variable-global: #e8e6e5;
+$dark-syntax-name-variable-instance: #e8e6e5;
+$dark-syntax-name-variable-magic: #e8e6e5;
+$dark-syntax-name-variable: #e8e6e5;
+$dark-syntax-name: #e8e6e5;
+$dark-syntax-number-bin: #ac9df2;
+$dark-syntax-number-float: #ac9df2;
+$dark-syntax-number-hex: #ac9df2;
+$dark-syntax-number-integer-long: #ac9df2;
+$dark-syntax-number-integer: #ac9df2;
+$dark-syntax-number-oct: #ac9df2;
+$dark-syntax-number: #ac9df2;
+$dark-syntax-operator-word: #ff6288;
+$dark-syntax-operator: #ff6288;
+$dark-syntax-punctuation: #e8e6e5;
+$dark-syntax-string-affix: #ffd966;
+$dark-syntax-string-backtick: #ffd966;
+$dark-syntax-string-char: #ffd966;
+$dark-syntax-string-delimiter: #ffd966;
+$dark-syntax-string-doc: #ffd966;
+$dark-syntax-string-double: #ffd966;
+$dark-syntax-string-escape: #ac9df2;
+$dark-syntax-string-heredoc: #ffd966;
+$dark-syntax-string-interpol: #ffd966;
+$dark-syntax-string-other: #ffd966;
+$dark-syntax-string-regex: #ffd966;
+$dark-syntax-string-single: #ffd966;
+$dark-syntax-string-symbol: #ffd966;
+$dark-syntax-string: #ffd966;
+$dark-syntax-text-whitespace: #e8e6e5;
+$dark-syntax-text: #e8e6e5;
