--- a/_sass/yolo/brand/syntax/_newspaper.scss
+++ b/_sass/yolo/brand/syntax/_newspaper.scss
@@ -1,174 +1,158 @@
 // ----------------------------------------------------------------------------
-// newspaper syntax theme
+// newspaper light-mode syntax theme
 // ----------------------------------------------------------------------------
-:root[light] {
-  --syntax-text: #e0e0e0;
-  --syntax-container-color: #0a0a0a;
-  --syntax-highlight-color: #e0e0e0;
-
-  --syntax-error: #999999;
-  --syntax-punctuation: #e0e0e0;
-  --syntax-text-whitespace: #e0e0e0;
-
-  --syntax-comment-hashbang: #8f8f8f;
-  --syntax-comment-multiline: #8f8f8f;
-  --syntax-comment-preproc: #8f8f8f;
-  --syntax-comment-preprocfile: #8f8f8f;
-  --syntax-comment-single: #8f8f8f;
-  --syntax-comment-special: #8f8f8f;
-  --syntax-comment: #8f8f8f;
-
-  --syntax-generic-deleted: #5c5c5c;
-  --syntax-generic-emph: #5c5c5c;
-  --syntax-generic-error: #999999;
-  --syntax-generic-heading: #cccccc;
-  --syntax-generic-inserted: #7a7a7a;
-  --syntax-generic-output: #858585;
-  --syntax-generic-prompt: #e0e0e0;
-  --syntax-generic-strong: #cccccc;
-  --syntax-generic-subheading: #525252;
-  --syntax-generic-traceback: #7a7a7a;
-
-  --syntax-keyword-constant: #ebebeb;
-  --syntax-keyword-declaration: #ebebeb;
-  --syntax-keyword-namespace: #ebebeb;
-  --syntax-keyword-pseudo: #ebebeb;
-  --syntax-keyword-reserved: #ebebeb;
-  --syntax-keyword-type: #b8b8b8;
-  --syntax-keyword: #ebebeb;
-
-  --syntax-literal-date: #e0e0e0;
-  --syntax-literal: #e0e0e0;
-
-  --syntax-name-attribute: #a3a3a3;
-  --syntax-name-builtin-pseudo: #ebebeb;
-  --syntax-name-builtin: #ebebeb;
-  --syntax-name-class: #e0e0e0;
-  --syntax-name-constant: #adadad;
-  --syntax-name-decorator: #f5f5f5;
-  --syntax-name-entity: #858585;
-  --syntax-name-exception: #ebebeb;
-  --syntax-name-function-magic: #ebebeb;
-  --syntax-name-function: #ebebeb;
-  --syntax-name-label: #fafafa;
-  --syntax-name-namespace: #e0e0e0;
-  --syntax-name-other: #a3a3a3;
-  --syntax-name-tag: #a3a3a3;
-  --syntax-name-variable-class: #cccccc;
-  --syntax-name-variable-global: #cccccc;
-  --syntax-name-variable-instance: #cccccc;
-  --syntax-name-variable: #cccccc;
-  --syntax-name: #e0e0e0;
-
-  --syntax-number-bin: #858585;
-  --syntax-number-float: #858585;
-  --syntax-number-hex: #858585;
-  --syntax-number-integer-long: #858585;
-  --syntax-number-integer: #858585;
-  --syntax-number-oct: #858585;
-  --syntax-number: #858585;
-
-  --syntax-operator-word: #ebebeb;
-  --syntax-operator: #ffffff;
-
-  --syntax-string-affix: #f5f5f5;
-  --syntax-string-backtick: #f5f5f5;
-  --syntax-string-char: #f5f5f5;
-  --syntax-string-delimiter: #f5f5f5;
-  --syntax-string-doc: #f5f5f5;
-  --syntax-string-double: #b8b8b8;
-  --syntax-string-escape: #f5f5f5;
-  --syntax-string-heredoc: #f5f5f5;
-  --syntax-string-interpol: #9F9F9F;
-  --syntax-string-other: #e0e0e0;
-  --syntax-string-regex: #ebebeb;
-  --syntax-string-single: #f5f5f5;
-  --syntax-string-symbol: #7a7a7a;
-  --syntax-string: #f5f5f5;
-}
-:root[dark] {
-  --syntax-text: #212121;
-  --syntax-container-color: #f5f5f5;
-  --syntax-highlight-color: #212121;
-
-  --syntax-error: #707070;
-  --syntax-punctuation: #212121;
-  --syntax-text-whitespace: #212121;
-
-  --syntax-comment-hashbang: #7a7a7a;
-  --syntax-comment-multiline: #7a7a7a;
-  --syntax-comment-preproc: #7a7a7a;
-  --syntax-comment-preprocfile: #7a7a7a;
-  --syntax-comment-single: #7a7a7a;
-  --syntax-comment-special: #7a7a7a;
-  --syntax-comment: #7a7a7a;
-
-  --syntax-generic-deleted: #adadad;
-  --syntax-generic-emph: #adadad;
-  --syntax-generic-error: #707070;
-  --syntax-generic-heading: #3d3d3d;
-  --syntax-generic-inserted: #8f8f8f;
-  --syntax-generic-output: #7a7a7a;
-  --syntax-generic-prompt: #212121;
-  --syntax-generic-strong: #3d3d3d;
-  --syntax-generic-subheading: #525252;
-  --syntax-generic-traceback: #8f8f8f;
-
-  --syntax-keyword-constant: #1f1f1f;
-  --syntax-keyword-declaration: #1f1f1f;
-  --syntax-keyword-namespace: #1f1f1f;
-  --syntax-keyword-pseudo: #1f1f1f;
-  --syntax-keyword-reserved: #1f1f1f;
-  --syntax-keyword-type: #525252;
-  --syntax-keyword: #1f1f1f;
-
-  --syntax-literal-date: #212121;
-  --syntax-literal: #212121;
-
-  --syntax-name-attribute: #707070;
-  --syntax-name-builtin-pseudo: #1f1f1f;
-  --syntax-name-builtin: #1f1f1f;
-  --syntax-name-class: #212121;
-  --syntax-name-constant: #000000;
-  --syntax-name-decorator: #000000;
-  --syntax-name-entity: #525252;
-  --syntax-name-exception: #1f1f1f;
-  --syntax-name-function-magic: #1f1f1f;
-  --syntax-name-function: #1f1f1f;
-  --syntax-name-label: #000000;
-  --syntax-name-namespace: #212121;
-  --syntax-name-other: #707070;
-  --syntax-name-tag: #707070;
-  --syntax-name-variable-class: #3d3d3d;
-  --syntax-name-variable-global: #3d3d3d;
-  --syntax-name-variable-instance: #3d3d3d;
-  --syntax-name-variable: #3d3d3d;
-  --syntax-name: #212121;
-
-  --syntax-number-bin: #666666;
-  --syntax-number-float: #666666;
-  --syntax-number-hex: #666666;
-  --syntax-number-integer-long: #666666;
-  --syntax-number-integer: #666666;
-  --syntax-number-oct: #666666;
-  --syntax-number: #666666;
-
-  --syntax-operator-word: #1f1f1f;
-  --syntax-operator: #000000;
-
-  --syntax-string-affix: #141414;
-  --syntax-string-backtick: #141414;
-  --syntax-string-char: #141414;
-  --syntax-string-delimiter: #141414;
-  --syntax-string-doc: #141414;
-  --syntax-string-double: #333333;
-  --syntax-string-escape: #141414;
-  --syntax-string-heredoc: #141414;
-  --syntax-string-interpol: #474747;
-  --syntax-string-other: #212121;
-  --syntax-string-regex: #1f1f1f;
-  --syntax-string-single: #141414;
-  --syntax-string-symbol: #000000;
-  --syntax-string: #333333;
-}
-
+$light-syntax-comment-hashbang: #8f8f8f;
+$light-syntax-comment-multiline: #8f8f8f;
+$light-syntax-comment-preproc: #8f8f8f;
+$light-syntax-comment-preprocfile: #8f8f8f;
+$light-syntax-comment-single: #8f8f8f;
+$light-syntax-comment-special: #8f8f8f;
+$light-syntax-comment: #8f8f8f;
+$light-syntax-container-color: #0a0a0a;
+$light-syntax-error: #999999;
+$light-syntax-generic-deleted: #5c5c5c;
+$light-syntax-generic-emph: #5c5c5c;
+$light-syntax-generic-error: #999999;
+$light-syntax-generic-heading: #cccccc;
+$light-syntax-generic-inserted: #7a7a7a;
+$light-syntax-generic-output: #858585;
+$light-syntax-generic-prompt: #e0e0e0;
+$light-syntax-generic-strong: #cccccc;
+$light-syntax-generic-subheading: #525252;
+$light-syntax-generic-traceback: #7a7a7a;
+$light-syntax-highlight-color: #e0e0e0;
+$light-syntax-keyword-constant: #ebebeb;
+$light-syntax-keyword-declaration: #ebebeb;
+$light-syntax-keyword-namespace: #ebebeb;
+$light-syntax-keyword-pseudo: #ebebeb;
+$light-syntax-keyword-reserved: #ebebeb;
+$light-syntax-keyword-type: #b8b8b8;
+$light-syntax-keyword: #ebebeb;
+$light-syntax-literal-date: #e0e0e0;
+$light-syntax-literal: #e0e0e0;
+$light-syntax-name-attribute: #a3a3a3;
+$light-syntax-name-builtin-pseudo: #ebebeb;
+$light-syntax-name-builtin: #ebebeb;
+$light-syntax-name-class: #e0e0e0;
+$light-syntax-name-constant: #adadad;
+$light-syntax-name-decorator: #f5f5f5;
+$light-syntax-name-entity: #858585;
+$light-syntax-name-exception: #ebebeb;
+$light-syntax-name-function-magic: #ebebeb;
+$light-syntax-name-function: #ebebeb;
+$light-syntax-name-label: #fafafa;
+$light-syntax-name-namespace: #e0e0e0;
+$light-syntax-name-other: #a3a3a3;
+$light-syntax-name-property: #ebebeb;
+$light-syntax-name-tag: #a3a3a3;
+$light-syntax-name-variable-class: #cccccc;
+$light-syntax-name-variable-global: #cccccc;
+$light-syntax-name-variable-instance: #cccccc;
+$light-syntax-name-variable-magic: #cccccc;
+$light-syntax-name-variable: #cccccc;
+$light-syntax-name: #e0e0e0;
+$light-syntax-number-bin: #858585;
+$light-syntax-number-float: #858585;
+$light-syntax-number-hex: #858585;
+$light-syntax-number-integer-long: #858585;
+$light-syntax-number-integer: #858585;
+$light-syntax-number-oct: #858585;
+$light-syntax-number: #858585;
+$light-syntax-operator-word: #ebebeb;
+$light-syntax-operator: #ffffff;
+$light-syntax-punctuation: #e0e0e0;
+$light-syntax-string-affix: #f5f5f5;
+$light-syntax-string-backtick: #f5f5f5;
+$light-syntax-string-char: #f5f5f5;
+$light-syntax-string-delimiter: #f5f5f5;
+$light-syntax-string-doc: #f5f5f5;
+$light-syntax-string-double: #b8b8b8;
+$light-syntax-string-escape: #f5f5f5;
+$light-syntax-string-heredoc: #f5f5f5;
+$light-syntax-string-interpol: #9F9F9F;
+$light-syntax-string-other: #e0e0e0;
+$light-syntax-string-regex: #ebebeb;
+$light-syntax-string-single: #f5f5f5;
+$light-syntax-string-symbol: #7a7a7a;
+$light-syntax-string: #f5f5f5;
+$light-syntax-text-whitespace: #e0e0e0;
+$light-syntax-text: #e0e0e0;
+// ----------------------------------------------------------------------------
+// newspaper dark-mode syntax theme
+// ----------------------------------------------------------------------------
+$dark-syntax-comment-hashbang: #7a7a7a;
+$dark-syntax-comment-multiline: #7a7a7a;
+$dark-syntax-comment-preproc: #7a7a7a;
+$dark-syntax-comment-preprocfile: #7a7a7a;
+$dark-syntax-comment-single: #7a7a7a;
+$dark-syntax-comment-special: #7a7a7a;
+$dark-syntax-comment: #7a7a7a;
+$dark-syntax-container-color: #f5f5f5;
+$dark-syntax-error: #707070;
+$dark-syntax-generic-deleted: #adadad;
+$dark-syntax-generic-emph: #adadad;
+$dark-syntax-generic-error: #707070;
+$dark-syntax-generic-heading: #3d3d3d;
+$dark-syntax-generic-inserted: #8f8f8f;
+$dark-syntax-generic-output: #7a7a7a;
+$dark-syntax-generic-prompt: #212121;
+$dark-syntax-generic-strong: #3d3d3d;
+$dark-syntax-generic-subheading: #525252;
+$dark-syntax-generic-traceback: #8f8f8f;
+$dark-syntax-highlight-color: #212121;
+$dark-syntax-keyword-constant: #1f1f1f;
+$dark-syntax-keyword-declaration: #1f1f1f;
+$dark-syntax-keyword-namespace: #1f1f1f;
+$dark-syntax-keyword-pseudo: #1f1f1f;
+$dark-syntax-keyword-reserved: #1f1f1f;
+$dark-syntax-keyword-type: #525252;
+$dark-syntax-keyword: #1f1f1f;
+$dark-syntax-literal-date: #212121;
+$dark-syntax-literal: #212121;
+$dark-syntax-name-attribute: #707070;
+$dark-syntax-name-builtin-pseudo: #1f1f1f;
+$dark-syntax-name-builtin: #1f1f1f;
+$dark-syntax-name-class: #212121;
+$dark-syntax-name-constant: #000000;
+$dark-syntax-name-decorator: #000000;
+$dark-syntax-name-entity: #525252;
+$dark-syntax-name-exception: #1f1f1f;
+$dark-syntax-name-function-magic: #1f1f1f;
+$dark-syntax-name-function: #1f1f1f;
+$dark-syntax-name-label: #000000;
+$dark-syntax-name-namespace: #212121;
+$dark-syntax-name-other: #707070;
+$dark-syntax-name-property: #1f1f1f;
+$dark-syntax-name-tag: #707070;
+$dark-syntax-name-variable-class: #3d3d3d;
+$dark-syntax-name-variable-global: #3d3d3d;
+$dark-syntax-name-variable-instance: #3d3d3d;
+$dark-syntax-name-variable-magic: #3d3d3d;
+$dark-syntax-name-variable: #3d3d3d;
+$dark-syntax-name: #212121;
+$dark-syntax-number-bin: #666666;
+$dark-syntax-number-float: #666666;
+$dark-syntax-number-hex: #666666;
+$dark-syntax-number-integer-long: #666666;
+$dark-syntax-number-integer: #666666;
+$dark-syntax-number-oct: #666666;
+$dark-syntax-number: #666666;
+$dark-syntax-operator-word: #1f1f1f;
+$dark-syntax-operator: #000000;
+$dark-syntax-punctuation: #212121;
+$dark-syntax-string-affix: #141414;
+$dark-syntax-string-backtick: #141414;
+$dark-syntax-string-char: #141414;
+$dark-syntax-string-delimiter: #141414;
+$dark-syntax-string-doc: #141414;
+$dark-syntax-string-double: #333333;
+$dark-syntax-string-escape: #141414;
+$dark-syntax-string-heredoc: #141414;
+$dark-syntax-string-interpol: #474747;
+$dark-syntax-string-other: #212121;
+$dark-syntax-string-regex: #1f1f1f;
+$dark-syntax-string-single: #141414;
+$dark-syntax-string-symbol: #000000;
+$dark-syntax-string: #333333;
+$dark-syntax-text-whitespace: #212121;
+$dark-syntax-text: #212121;
