--- a/_sass/yolo/brand/theme/_bubblegum.scss
+++ b/_sass/yolo/brand/theme/_bubblegum.scss
@@ -1,49 +1,48 @@
 // ----------------------------------------------------------------------------
-// bubble gum
+// bubblegum light-mode
 // ----------------------------------------------------------------------------
-:root[light] {
-  // primary colors
-  --primary-color: #fff0f3;
-  --on-primary-color: #c9184b;
-  --primary-container-color: #c9184b;
-  --on-primary-container-color: #fff0f3;
-  // secondary colors  
-  --secondary-color: #c9184b;
-  --on-secondary-color: #fff0f3;
-  --secondary-container-color: #c9184b;
-  --on-secondary-container-color: #fff0f3;
-  // tertiary colors
-  --tertiary-color: #ff87bd;
-  --on-tertiary-color: #fff0f3;
-  // general colors
-  --link-color: #ff87bd;
-  --neutral-color: #212121;
-  --on-neutral-color: #e0e0e0;
-  // font families
-  --font-family-primary: "Hepta Slab", serif;
-  --font-family-secondary: "Poppins", sans-serif;
-  --font-family-monospace: "JetBrains Mono", monospace;
-}
-:root[dark] {
-  // primary colors
-  --primary-color: #c9184b;
-  --on-primary-color: #fff0f3;
-  --primary-container-color: #fff0f3;
-  --on-primary-container-color: #c9184b;
-  // secondary colors  
-  --secondary-color: #fff0f3;
-  --on-secondary-color: #c9184b;
-  --secondary-container-color: #fff0f3;
-  --on-secondary-container-color: #c9184b;
-  // tertiary colors
-  --tertiary-color: #ffa1cb;
-  --on-tertiary-color: #c9184b;
-  // general colors
-  --link-color: #ffa1cb;
-  --neutral-color: #e0e0e0;
-  --on-neutral-color: #212121;
-  // font families
-  --font-family-primary: "Hepta Slab", serif;
-  --font-family-secondary: "Poppins", sans-serif;
-  --font-family-monospace: "JetBrains Mono", monospace;
-}
+// primary colors
+$light-primary-color: #fff0f3;
+$light-on-primary-color: #c9184b;
+$light-primary-container-color: #c9184b;
+$light-on-primary-container-color: #fff0f3;
+// secondary colors  
+$light-secondary-color: #c9184b;
+$light-on-secondary-color: #fff0f3;
+$light-secondary-container-color: #c9184b;
+$light-on-secondary-container-color: #fff0f3;
+// tertiary colors
+$light-tertiary-color: #ff87bd;
+$light-on-tertiary-color: #fff0f3;
+// general colors
+$light-link-color: #ff87bd;
+$light-neutral-color: #212121;
+$light-on-neutral-color: #e0e0e0;
+// font families
+$light-font-family-primary: "Hepta Slab", serif;
+$light-font-family-secondary: "Poppins", sans-serif;
+$light-font-family-monospace: "JetBrains Mono", monospace;
+// ----------------------------------------------------------------------------
+// bubblegum dark-mode
+// ----------------------------------------------------------------------------
+// primary colors
+$dark-primary-color: #c9184b;
+$dark-on-primary-color: #fff0f3;
+$dark-primary-container-color: #fff0f3;
+$dark-on-primary-container-color: #c9184b;
+// secondary colors  
+$dark-secondary-color: #fff0f3;
+$dark-on-secondary-color: #c9184b;
+$dark-secondary-container-color: #fff0f3;
+$dark-on-secondary-container-color: #c9184b;
+// tertiary colors
+$dark-tertiary-color: #ffa1cb;
+$dark-on-tertiary-color: #c9184b;
+// general colors
+$dark-link-color: #ffa1cb;
+$dark-neutral-color: #e0e0e0;
+$dark-on-neutral-color: #212121;
+// font families
+$dark-font-family-primary: "Hepta Slab", serif;
+$dark-font-family-secondary: "Poppins", sans-serif;
+$dark-font-family-monospace: "JetBrains Mono", monospace;
