--- a/_sass/yolo/brand/theme/_dusk.scss
+++ b/_sass/yolo/brand/theme/_dusk.scss
@@ -1,49 +1,48 @@
 // ----------------------------------------------------------------------------
-// dusk theme
+// dusk light-mode
 // ----------------------------------------------------------------------------
-:root[light] {
-  // primary colors
-  --primary-color: #fffcfb;
-  --on-primary-color: #20142e;
-  --primary-container-color: #380749;
-  --on-primary-container-color: #f45e02;
-  // secondary colors  
-  --secondary-color: #d40278;
-  --on-secondary-color: #fcd9ef;
-  --secondary-container-color: #2e2157;
-  --on-secondary-container-color: #ffd0b2;
-  // tertiary colors  
-  --tertiary-color: #f45e02;
-  --on-tertiary-color: #fff3eb;
-  // general colors  
-  --link-color: #00a0ff;
-  --neutral-color: #212121;
-  --on-neutral-color: #e0e0e0;  
-  // font families  
-  --font-family-primary: "Red Hat Mono", monospace;
-  --font-family-secondary: "Red Hat Text", sans-serif;
-  --font-family-monospace: "Source Code Pro", monospace;
-}
-:root[dark] {
-  // primary colors
-  --primary-color: #20142e;
-  --on-primary-color: #f549b3;
-  --primary-container-color: #460a5b;
-  --on-primary-container-color: #fe6c11;
-  // secondary colors  
-  --secondary-color: #b5036a;
-  --on-secondary-color: #0d0221;
-  --secondary-container-color: #2e2157;
-  --on-secondary-container-color: #ffd0b2;
-  // tertiary colors  
-  --tertiary-color: #fe6c11;
-  --on-tertiary-color: #0d0221;
-  // general colors  
-  --link-color: #b2feff;
-  --neutral-color: #e0e0e0;
-  --on-neutral-color: #212121;  
-  // font families  
-  --font-family-primary: "Red Hat Mono", monospace;
-  --font-family-secondary: "Red Hat Text", sans-serif;
-  --font-family-monospace: "Source Code Pro", monospace;
-}
+// primary colors
+$light-primary-color: #fffcfb;
+$light-on-primary-color: #20142e;
+$light-primary-container-color: #380749;
+$light-on-primary-container-color: #f45e02;
+// secondary colors  
+$light-secondary-color: #d40278;
+$light-on-secondary-color: #fcd9ef;
+$light-secondary-container-color: #2e2157;
+$light-on-secondary-container-color: #ffd0b2;
+// tertiary colors  
+$light-tertiary-color: #f45e02;
+$light-on-tertiary-color: #fff3eb;
+// general colors  
+$light-link-color: #00a0ff;
+$light-neutral-color: #212121;
+$light-on-neutral-color: #e0e0e0;  
+// font families  
+$light-font-family-primary: "Red Hat Mono", monospace;
+$light-font-family-secondary: "Red Hat Text", sans-serif;
+$light-font-family-monospace: "Source Code Pro", monospace;
+// ----------------------------------------------------------------------------
+// dusk dark-mode
+// ----------------------------------------------------------------------------
+// primary colors
+$dark-primary-color: #20142e;
+$dark-on-primary-color: #f549b3;
+$dark-primary-container-color: #460a5b;
+$dark-on-primary-container-color: #fe6c11;
+// secondary colors  
+$dark-secondary-color: #b5036a;
+$dark-on-secondary-color: #0d0221;
+$dark-secondary-container-color: #2e2157;
+$dark-on-secondary-container-color: #ffd0b2;
+// tertiary colors  
+$dark-tertiary-color: #fe6c11;
+$dark-on-tertiary-color: #0d0221;
+// general colors  
+$dark-link-color: #b2feff;
+$dark-neutral-color: #e0e0e0;
+$dark-on-neutral-color: #212121;
+// font families  
+$dark-font-family-primary: "Red Hat Mono", monospace;
+$dark-font-family-secondary: "Red Hat Text", sans-serif;
+$dark-font-family-monospace: "Source Code Pro", monospace;
