--- a/_sass/yolo/brand/theme/_mint.scss
+++ b/_sass/yolo/brand/theme/_mint.scss
@@ -1,49 +1,48 @@
 // ----------------------------------------------------------------------------
-// mint theme
+// mint light-mode
 // ----------------------------------------------------------------------------
-:root[light] {
-  // primary colors
-  --primary-color: #f4fff4;
-  --on-primary-color: #006e2e;
-  --primary-container-color: #00c854;
-  --on-primary-container-color: #f4fff4;
-  // secondary colors  
-  --secondary-color: #00c854;
-  --on-secondary-color: #f4fff4;
-  --secondary-container-color: #00c854;
-  --on-secondary-container-color: #f4fff4;
-  // tertiary colors
-  --tertiary-color: #008343;
-  --on-tertiary-color: #f4fff4;
-  // general colors
-  --link-color: #000;
-  --neutral-color: #212121;
-  --on-neutral-color: #e0e0e0;
-  // font families
-  --font-family-primary: "Poppins", sans-serif;
-  --font-family-secondary: "Red Hat Text", sans-serif;
-  --font-family-monospace: "Source Code Pro", monospace;
-}
-:root[dark] {
-  // primary colors
-  --primary-color: #00a344;
-  --on-primary-color: #f4fff4;
-  --primary-container-color: #f4fff4;
-  --on-primary-container-color: #00a344;
-  // secondary colors  
-  --secondary-color: #f4fff4;
-  --on-secondary-color: #00a344;
-  --secondary-container-color: #f4fff4;
-  --on-secondary-container-color: #00a344;
-  // tertiary colors
-  --tertiary-color: #11ff89;
-  --on-tertiary-color: #00a344;
-  // general colors
-  --link-color: #000;
-  --neutral-color: #212121;
-  --on-neutral-color: #e0e0e0;
-  // font families
-  --font-family-primary: "Poppins", sans-serif;
-  --font-family-secondary: "Red Hat Text", sans-serif;
-  --font-family-monospace: "Source Code Pro", monospace;
-}
+// primary colors
+$light-primary-color: #f4fff4;
+$light-on-primary-color: #006e2e;
+$light-primary-container-color: #00c854;
+$light-on-primary-container-color: #f4fff4;
+// secondary colors  
+$light-secondary-color: #00c854;
+$light-on-secondary-color: #f4fff4;
+$light-secondary-container-color: #00c854;
+$light-on-secondary-container-color: #f4fff4;
+// tertiary colors
+$light-tertiary-color: #008343;
+$light-on-tertiary-color: #f4fff4;
+// general colors
+$light-link-color: #000;
+$light-neutral-color: #212121;
+$light-on-neutral-color: #e0e0e0;
+// font families
+$light-font-family-primary: "Poppins", sans-serif;
+$light-font-family-secondary: "Red Hat Text", sans-serif;
+$light-font-family-monospace: "Source Code Pro", monospace;
+// ----------------------------------------------------------------------------
+// mint dark-mode
+// ----------------------------------------------------------------------------
+// primary colors
+$dark-primary-color: #00a344;
+$dark-on-primary-color: #f4fff4;
+$dark-primary-container-color: #f4fff4;
+$dark-on-primary-container-color: #00a344;
+// secondary colors  
+$dark-secondary-color: #f4fff4;
+$dark-on-secondary-color: #00a344;
+$dark-secondary-container-color: #f4fff4;
+$dark-on-secondary-container-color: #00a344;
+// tertiary colors
+$dark-tertiary-color: #11ff89;
+$dark-on-tertiary-color: #00a344;
+// general colors
+$dark-link-color: #000;
+$dark-neutral-color: #212121;
+$dark-on-neutral-color: #e0e0e0;
+// font families
+$dark-font-family-primary: "Poppins", sans-serif;
+$dark-font-family-secondary: "Red Hat Text", sans-serif;
+$dark-font-family-monospace: "Source Code Pro", monospace;
