--- a/_sass/yolo/brand/theme/_seaside.scss
+++ b/_sass/yolo/brand/theme/_seaside.scss
@@ -1,49 +1,48 @@
 // ----------------------------------------------------------------------------
-// seaside theme
+// seaside light-mode
 // ----------------------------------------------------------------------------
-:root[light] {
-  // primary colors
-  --primary-color: #eefafc;
-  --on-primary-color: #0a3e47;
-  --primary-container-color: #dbf5fa;
-  --on-primary-container-color: #0a3e47;
-  // secondary colors  
-  --secondary-color: #015d8f;
-  --on-secondary-color: #dbf5fa;
-  --secondary-container-color: #dbf5fa;
-  --on-secondary-container-color: #015d8f;
-  // tertiary colors
-  --tertiary-color: #f95838;
-  --on-tertiary-color: #f9e1dc;
-  // general colors
-  --link-color: #0bb4d8;
-  --neutral-color: #212121;
-  --on-neutral-color: #e0e0e0;
-  // font families
-  --font-family-primary: "Poppins", sans-serif;
-  --font-family-secondary: "Raleway", sans-serif;
-  --font-family-monospace: "Source Code Pro", monospace;
-}
-:root[dark] {
-  // primary colors
-  --primary-color: #001b29;
-  --on-primary-color: #eefafc;
-  --primary-container-color: #dbf5fa;
-  --on-primary-container-color: #0a3e47;
-  // secondary colors  
-  --secondary-color: #5de4ff;
-  --on-secondary-color: #002e46;
-  --secondary-container-color: #002e46;
-  --on-secondary-container-color: #90e0ef;
-  // tertiary colors
-  --tertiary-color: #f95838;
-  --on-tertiary-color: #250600;
-  // general colors
-  --link-color: #0692e0;
-  --neutral-color: #e0e0e0;
-  --on-neutral-color: #212121;
-  // font families
-  --font-family-primary: "Poppins", sans-serif;
-  --font-family-secondary: "Raleway", sans-serif;
-  --font-family-monospace: "Source Code Pro", monospace;
-}
+// primary colors
+$light-primary-color: #eefafc;
+$light-on-primary-color: #0a3e47;
+$light-primary-container-color: #dbf5fa;
+$light-on-primary-container-color: #0a3e47;
+// secondary colors  
+$light-secondary-color: #015d8f;
+$light-on-secondary-color: #dbf5fa;
+$light-secondary-container-color: #dbf5fa;
+$light-on-secondary-container-color: #015d8f;
+// tertiary colors
+$light-tertiary-color: #f95838;
+$light-on-tertiary-color: #f9e1dc;
+// general colors
+$light-link-color: #0bb4d8;
+$light-neutral-color: #212121;
+$light-on-neutral-color: #e0e0e0;
+// font families
+$light-font-family-primary: "Poppins", sans-serif;
+$light-font-family-secondary: "Raleway", sans-serif;
+$light-font-family-monospace: "Source Code Pro", monospace;
+// ----------------------------------------------------------------------------
+// seaside dark-mode
+// ----------------------------------------------------------------------------
+// primary colors
+$dark-primary-color: #001b29;
+$dark-on-primary-color: #eefafc;
+$dark-primary-container-color: #dbf5fa;
+$dark-on-primary-container-color: #0a3e47;
+// secondary colors  
+$dark-secondary-color: #5de4ff;
+$dark-on-secondary-color: #002e46;
+$dark-secondary-container-color: #002e46;
+$dark-on-secondary-container-color: #90e0ef;
+// tertiary colors
+$dark-tertiary-color: #f95838;
+$dark-on-tertiary-color: #250600;
+// general colors
+$dark-link-color: #0692e0;
+$dark-neutral-color: #e0e0e0;
+$dark-on-neutral-color: #212121;
+// font families
+$dark-font-family-primary: "Poppins", sans-serif;
+$dark-font-family-secondary: "Raleway", sans-serif;
+$dark-font-family-monospace: "Source Code Pro", monospace;
