--- a/_sass/yolo/brand/theme/_zoot.scss
+++ b/_sass/yolo/brand/theme/_zoot.scss
@@ -1,49 +1,48 @@
 // ----------------------------------------------------------------------------
-// zoot theme
+// zoot light-mode
 // ----------------------------------------------------------------------------
-:root[light] {
-  // primary colors
-  --primary-color: #edf2f4;
-  --on-primary-color: #2b2d43;
-  --primary-container-color: #101119;
-  --on-primary-container-color: #edf2f4;
-  // secondary colors  
-  --secondary-color: #414363;
-  --on-secondary-color: #edf2f4;
-  --secondary-container-color: #2b2d43;
-  --on-secondary-container-color: #edf2f4;
-  // tertiary colors
-  --tertiary-color: #d90529;
-  --on-tertiary-color: #edf2f4;
-  // general colors
-  --link-color: #ef243c;
-  --neutral-color: #212121;
-  --on-neutral-color: #e0e0e0;
-  // font families
-  --font-family-primary: "Red Hat Text", sans-serif;
-  --font-family-secondary: "Red Hat Text", sans-serif;
-  --font-family-monospace: "Red Hat Mono", monospace;
-}
-:root[dark] {
-  // primary colors
-  --primary-color: #101119;
-  --on-primary-color: #f5f5f5;
-  --primary-container-color: #8c041a;
-  --on-primary-container-color: #f5f5f5;
-  // secondary colors  
-  --secondary-color: #fff;
-  --on-secondary-color: #101119;
-  --secondary-container-color: #fff;
-  --on-secondary-container-color: #101119;
-  // tertiary colors
-  --tertiary-color: #fa1137;
-  --on-tertiary-color: #101119;
-  // general colors
-  --link-color: #32cdff;
-  --neutral-color: #e0e0e0;
-  --on-neutral-color: #212121;
-  // font families
-  --font-family-primary: "Red Hat Text", sans-serif;
-  --font-family-secondary: "Red Hat Text", sans-serif;
-  --font-family-monospace: "Red Hat Mono", monospace;
-}
+// primary colors
+$light-primary-color: #edf2f4;
+$light-on-primary-color: #2b2d43;
+$light-primary-container-color: #101119;
+$light-on-primary-container-color: #edf2f4;
+// secondary colors  
+$light-secondary-color: #414363;
+$light-on-secondary-color: #edf2f4;
+$light-secondary-container-color: #2b2d43;
+$light-on-secondary-container-color: #edf2f4;
+// tertiary colors
+$light-tertiary-color: #d90529;
+$light-on-tertiary-color: #edf2f4;
+// general colors
+$light-link-color: #ef243c;
+$light-neutral-color: #212121;
+$light-on-neutral-color: #e0e0e0;
+// font families
+$light-font-family-primary: "Red Hat Text", sans-serif;
+$light-font-family-secondary: "Red Hat Text", sans-serif;
+$light-font-family-monospace: "Red Hat Mono", monospace;
+// ----------------------------------------------------------------------------
+// zoot dark-mode
+// ----------------------------------------------------------------------------
+// primary colors
+$dark-primary-color: #101119;
+$dark-on-primary-color: #f5f5f5;
+$dark-primary-container-color: #8c041a;
+$dark-on-primary-container-color: #f5f5f5;
+// secondary colors  
+$dark-secondary-color: #fff;
+$dark-on-secondary-color: #101119;
+$dark-secondary-container-color: #fff;
+$dark-on-secondary-container-color: #101119;
+// tertiary colors
+$dark-tertiary-color: #fa1137;
+$dark-on-tertiary-color: #101119;
+// general colors
+$dark-link-color: #32cdff;
+$dark-neutral-color: #e0e0e0;
+$dark-on-neutral-color: #212121;
+// font families
+$dark-font-family-primary: "Red Hat Text", sans-serif;
+$dark-font-family-secondary: "Red Hat Text", sans-serif;
+$dark-font-family-monospace: "Red Hat Mono", monospace;
