--- a/css/main.scss
+++ b/css/main.scss
@@ -5,10 +5,9 @@
 // ----------------------------------------------------------------------------
 // Main scss modules:
 // 1. base
-// 2. core
-// 3. components
-// 4. brand
-// 5. yolo
+// 2. utilities
+// 3. core
+// 4. components
 // ----------------------------------------------------------------------------
 @import "yolo/base/all";
 @import "yolo/utilities/all";
@@ -17,6 +16,3 @@
 {% if site.data.settings.sidebar %}
 @import "yolo/components/sidebar";
 {% endif %}
-//@import "yolo/brand/theme/{{ site.data.settings.brand.theme | default: 'yolo' }}";
-//@import "yolo/brand/syntax/{{ site.data.settings.brand.syntax | default: 'yolo' }}";
-//@import "yolo/brand/all";
